t+ja:[[易い]] ([[WT:EDIT|Assisted]]) <simple#11364004>

--- a/en/s/simple.7363.wikitext
+++ b/en/s/simple.7363.wikitext
@@ -113,7 +113,7 @@
 * Hungarian: {{t+|hu|egyszerű}}
 * [[Ido]]: {{t+|io|simpla|xs=Ido}}
 * Italian: {{t+|it|semplice}}
-* Japanese: {{t|ja|簡単|tr=かんたんな, kantan-na|alt=簡単な|sc=Jpan}}, {{t|ja|単純|tr=たんじゅんな, tanjun-na|alt=単純な|sc=Jpan}}
+* Japanese: {{t|ja|簡単|tr=かんたんな, kantan-na|alt=簡単な|sc=Jpan}}, {{t|ja|単純|tr=たんじゅんな, tanjun-na|alt=単純な|sc=Jpan}}, {{qualifier|easy}} {{t|ja|易い|tr=やすい, yasui|sc=Jpan}}
 * Kazakh: {{t|kk|қарапайым|tr=qarapayım|sc=Cyrl|xs=Kazakh}}
 {{trans-mid}}
 * Korean: {{t|ko|간단한|tr=gandan-han|sc=Kore}} ({{t|ko|簡單|sc=Kore}} + {{t|ko|한|sc=Kore}}), {{qualifier|predicate}} {{t|ko|간단하다|tr=gandan-hada|sc=Kore}}
