--- a/en/r/rot.26064.wikitext
+++ b/en/r/rot.26064.wikitext
@@ -2,6 +2,9 @@
 {{also|Rot}}
 ==English==
 
+===Etymology===
+{{rfe}}
+
 ===Pronunciation===
 * {{a|GenAM}} {{IPA|[ɹɑt]}}
 * {{audio|en-us-rot.ogg|Audio (US)}}
