--- a/en/b/bubble.7366.wikitext
+++ b/en/b/bubble.7366.wikitext
@@ -41,7 +41,7 @@ Partly imitative, also influenced by {{term|burble}}.
 * Korean: {{t+|ko|거품|tr=geopum|sc=Hang}}
 * Kurdish: {{t|ku|بڵق|sc=ku-Arab}}
 * Latin: {{t-|la|bulla|f}}
-* Latvian: {{t-|lv|burbuļi|m|xs=Latvian}}
+* Latvian: {{t-|lv|burbulis|m|xs=Latvian}}
 * [[Macedonian]]: {{t|mk|меур|m|tr=méur}}
 * Norwegian: {{t|no|bubla|f}}
 * Polish: {{t+|pl|bańka|f}}
