--- a/en/t/then.7353.wikitext
+++ b/en/t/then.7353.wikitext
@@ -38,7 +38,7 @@ From {{etyl|enm}} {{term|then|then(ne)|lang=enm}}, {{term|than|than(ne)|lang=enm
 * Arabic: {{Arab|[[ثم]]}} (thúmma)
 * Bengali: {{l|bn|তখন|tr=tôkhôn|sc=Beng}}
 * [[Catalan]]: [[llavors]]
-* Chinese: [[当時]], [[当时]] (dāngshí), [[那時]], [[那时]] (nà shí)
+* Chinese: [[當時]], [[当时]] (dāngshí), [[那時]], [[那时]] (nà shí)
 * Czech: {{t+|cs|tehdy}}
 * Dutch: {{t+|nl|toen}}
 * Esperanto: {{t-|eo|tiam|xs=Esperanto}}
