t+es:[[modificación]] ([[WT:EDIT|Assisted]]) <adjustment#11382959>

--- a/en/a/adjustment.4313.wikitext
+++ b/en/a/adjustment.4313.wikitext
@@ -49,7 +49,7 @@
 * Portuguese: [[ajustamento]] {{m}}, [[ajuste]] {{m}}
 * Russian: {{t|ru|юстировка|f|tr=justiróvka}}
 * Slovene: [[popravek]] {{m}}
-* Spanish: {{t-|es|ajuste|m}}
+* Spanish: {{t-|es|ajuste|m}}, {{t|es|modificación|f}}
 * Swedish: {{t|sv|justering|c}}
 * [[Telugu]]: [[సర్దుబాటు]]
 * {{trreq|Tupinambá}}
