--- a/en/b/Balkans.741828.wikitext
+++ b/en/b/Balkans.741828.wikitext
@@ -30,7 +30,7 @@ Used with the definite article {{term|the}}.
 * [[Asturian]]: {{t-|ast|Balcanes|m|xs=Asturian}}
 * [[Catalan]]: {{t-|ca|Balcans|m|p}}
 * Chinese:
-*: Mandarin: {{t|zh|巴爾幹半島|sc=Hani}}, {{t|zh|巴尔干半岛|tr=Bā'ěrgàn bàndǎo|sc=Hani}}
+*: Mandarin: {{t|zh|巴爾幹|sc=Hani}}, {{t|zh|巴尔干|tr=Bā'ěrgàn|sc=Hani}}, {{t|zh|巴爾幹半島|sc=Hani}}, {{t|zh|巴尔干半岛|tr=Bā'ěrgàn bàndǎo|sc=Hani}}
 * Croatian: {{t-|hr|Balkan|m}}
 * Finnish: {{t|fi|Balkan}}
 * French: {{t+|fr|Balkans|m}}
