--- a/en/m/mooses.720092.wikitext
+++ b/en/m/mooses.720092.wikitext
@@ -2,7 +2,7 @@
 ==English==
 
 ===Noun===
-'''mooses''' {{p}}
+'''meese''' {{p}}
 
 # {{context|dated|rare}} {{plural of|[[moose]]}}
 #* '''1876,''' Familiar Letters of John Adams and His Wife Abigail Adams: With a Memoir of ... - Page 272, ''by John Adams, Abigail Adams, Charles Francis Adams''
