--- a/en/a/again.4310.wikitext
+++ b/en/a/again.4310.wikitext
@@ -54,6 +54,7 @@
 * Arabic: {{t-|ar|مرة أخرى|f|tr=márra(tan) 'úkhra}},  {{t|ar|كرة أخرى|f|tr=kárra(tan) 'úkhra}} {{adverbial accusative used}}
 * Armenian: {{t-|hy|էլի|tr=ēli}}, {{t|hy|կրկին|tr=krkin}}, {{qualifier|Eastern-Armenian}} {{t|hy|նորից|tr=noric’}}, {{qualifier|Western-Armenian}} {{t|hy|նորեն|tr=noren}}
 * [[Basque]]: [[berriro]]
+* Belarusian: {{t|be|зноў|tr=znoŭ|sc=Cyrl}}, {{t|be|яшчэ раз|tr=jaščé raz|sc=Cyrl}}
 * Bengali: {{t-|bn|আবার|tr=abar|sc=Beng|xs=Bengali}}
 * [[Breton]]: [[adarre]]
 * Bulgarian: [[отново]] (otnovo), [[пак]] (pak)
@@ -63,7 +64,7 @@
 *: Mandarin: {{qualifier|of future events}} {{t-|cmn|再|tr=zài|sc=Hani}}, {{qualifier|of past events}} {{t-|cmn|又|tr=yòu|sc=Hani}}, {{qualifier|once again}} {{t-|cmn|遍|alt=再...一遍|tr=zai4... yíbiàn|sc=Hani}}, {{t-|cmn|重新|tr=chóngxīn|sc=Hani}}
 * [[Crimean Tatar]]: [[kene]]
 * Croatian: {{t-|hr|opet}}
-* Czech: [[zase]], [[opět]], [[znova]]
+* Czech: [[zase]], [[opět]], [[znova]], {{t|cs|zase}}, {{t|cs|opět}}, {{t|cs|znova}}
 * Danish: {{t+|da|igen}}
 * Dutch: {{t+|nl|opnieuw}}, {{t+|nl|nogmaals}}, {{t+|nl|weer}}, {{t+|nl|alweer}}, {{t-|nl|wederom}}
 * Esperanto: {{t-|eo|denove|xs=Esperanto}}, {{t-|eo|ree|xs=Esperanto}}
@@ -76,7 +77,7 @@
 * Greek: {{t+|el|ξανά|tr=xaná}}, {{t+|el|πάλι|tr=páli}}
 * Hawaiian: [[hou]]
 * Hebrew: {{t-|he|שוב|tr=šuv}}
-* Hindi: {{t-|hi|फिर|tr=phir|xs=Hindi}}
+* Hindi: {{t-|hi|फिर|tr=phir|xs=Hindi}}, {{t|hi|फिर से|tr=phir se|sc=Deva}}, {{t|hi|दुबारा|tr=dubārā|sc=Deva}}
 * Hungarian: {{t+|hu|újra}}, {{t+|hu|megint}}, {{t+|hu|ismét}}
 * Icelandic: {{t+|is|aftur}}, {{t|is|á ný}}
 * [[Ido]]: [[ankore un foyo]], [[ankorfoye]]
@@ -86,8 +87,8 @@
 * Japanese: {{t+|ja|又}}, {{t-|ja|また|tr=mata}},  {{t-|ja|再び|tr=ふたたび, futatabi}},  {{t|ja|もう一度|tr=mō ichido}},  {{t|ja|あらためて|tr=aratamete}}
 {{trans-mid}}
 * {{trreq|Kannada}}
-* [[Khmer]]: {{Khmr|[[ទៀត]]}} (dtīət), {{Khmr|[[ម្ដងទៀត]]}} (mdorng dtīət)
-* Korean: [[다시]] (dasi)
+* [[Khmer]]: {{Khmr|[[ទៀត]]}} (dtīət), {{Khmr|[[ម្ដងទៀត]]}} (mdorng dtīət), {{t|km|ទៀត|tr=dtīət|sc=Khmr}}, {{t|km|ម្ដងទៀត|tr=mdorng dtīət|sc=Khmr}}
+* Korean: [[다시]] (dasi), {{t|ko|다시|tr=dasi|sc=Kore}}
 * Kurdish: {{ku-Arab|[[دیسان]]}}, {{ku-Arab|[[هه‌مدیس]]}}, {{ku-Arab|[[دوباره‌]]}}
 * [[Lao]]: {{t-|lo|ອີກ|tr='iik|sc=Laoo|xs=Lao}}
 * Latin: {{t-|la|denuo}}
@@ -101,25 +102,27 @@
 * Navajo: {{tø|nv|nááná}}
 * Norwegian: {{t+|no|igjen}}
 * Persian: {{t|fa|دگربار}}
-* Polish: [[ponownie]], [[jeszcze raz]], [[znowu]]
+* Polish: [[ponownie]], [[jeszcze raz]], [[znowu]], {{t|pl|ponownie}}, {{t|pl|znowu}}, {{t|pl|jeszcze raz}}
 * Portuguese: [[de novo]], [[outra vez]], [[novamente]]
 * Romanian: {{t-|ro|iarăşi}}, {{t-|ro|din nou}}
-* Russian: {{t+|ru|опять|tr=opját’}}, {{t+|ru|снова|tr=snóva}}
+* Russian: {{t+|ru|опять|tr=opját’}}, {{t+|ru|снова|tr=snóva}}, {{t|ru|ещё раз|tr=ješčó raz|sc=Cyrl}}
 * Sanskrit: [[पुनः]]
 * [[Scottish Gaelic]]: {{t-|gd|a-rithist|xs=Scottish Gaelic}}, {{t|gd|às ùr}}
 * Serbian: [[opet]], [[ponovo]], [[obnova]], [[snova]], [[odnova]]
 * [[Sicilian]]: {{t+|scn|arreri|xs=Sicilian}},  {{t+|scn|arrè|xs=Sicilian}}
-* Slovene: [[spet]], [[ponovno]], [[znova]]
+* Slovene: [[spet]], [[ponovno]], [[znova]], {{t|sl|spet}}, {{t|sl|ponovno}}, {{t|sl|znova}}
 * Spanish: {{t-|es|otra vez}}, {{t+|es|de nuevo}}
 * Swedish: {{t+|sv|igen}}, {{t|sv|ånyo}}, {{t+|sv|åter}}, {{t|sv|på nytt}}, {{t|sv|å nyo}}
 * [[Tagalog]]: {{t-|tl|muli|xs=Tagalog}}, {{t|tl|nanaman|xs=Tagalog}}, {{t|tl|ulit|xs=Tagalog}}
 * [[Telugu]]: [[మళ్లీ]] (mallee), [[మరలా]] (maralaa)
 * Thai: {{t+|th|อีก|tr=èek}},  {{t-|th|ใหม่|tr=mài}}
 * Turkish: {{t+|tr|yeniden}}, {{t+|tr|tekrar}}, {{t+|tr|gene}}
+* Ukrainian: {{t|uk|знову|tr=znóvu|sc=Cyrl}}, {{t|uk|знов|tr=znov|sc=Cyrl}}, {{t|uk|ще раз|tr=šče raz|sc=Cyrl}}
+* Urdu: {{t|ur|پھر|tr=phir|sc=ur-Arab}}, {{t|ur|پھر سے|tr=phir se|sc=ur-Arab}}, {{t|ur|دوبارہ|tr=dubārā|sc=ur-Arab}}
 * Vietnamese: {{t+|vi|lại|xs=Vietnamese}}
 * Welsh: {{t-|cy|eto|xs=Welsh}}
 * [[West Frisian]]: {{t-|fy|wer|xs=West Frisian}}
-* Yiddish: [[ווידער]] (vider), [[נאָכאַמאָל]] (nokhamol)
+* Yiddish: [[ווידער]] (vider), [[נאָכאַמאָל]] (nokhamol), {{t|yi|ווידער|tr=vider|sc=Hebr}}, {{t|yi|נאָכאַמאָל|tr=nokhamol|sc=Hebr}}
 * [[Yucatec Maya]]: {{tø|yua|ka’teen}}
 {{trans-bottom}}
 
