--- a/en/t/then.7353.wikitext
+++ b/en/t/then.7353.wikitext
@@ -35,10 +35,10 @@ From {{etyl|enm}} {{term|then|then(ne)|lang=enm}}, {{term|than|than(ne)|lang=enm
 ====Translations====
 {{trans-top|at that time}}
 * Albanian: {{t+|sq|atëherë|xs=Albanian}}
-* Arabic: {{Arab|[[ثم]]}} (thúmma), {{t|ar|ثم|tr=thúmma|sc=Arab}}
-* Bengali: {{l|bn|তখন|tr=tôkhôn|sc=Beng}}, {{t|bn|তখন|tr=tôkhôn|sc=Beng}}
+* Arabic: {{t|ar|ثم|tr=thúmma|sc=Arab}}
+* Bengali: {{t|bn|তখন|tr=tôkhôn|sc=Beng}}
 * [[Catalan]]: [[llavors]]
-* Chinese: [[當時]], [[当时]] (dāngshí), [[那時]], [[那时]] (nà shí)
+* Chinese:
 *: Mandarin: {{t|zh|當時|sc=Hani}}, {{t|zh|当时|tr=dāngshí|sc=Hani}}, {{t|zh|那時|sc=Hani}}, {{t|zh|那时|tr=nà shí|sc=Hani}}
 * Czech: {{t+|cs|tehdy}}
 * Dutch: {{t+|nl|toen}}
@@ -46,12 +46,12 @@ From {{etyl|enm}} {{term|then|then(ne)|lang=enm}}, {{term|than|than(ne)|lang=enm
 * Finnish: {{t+|fi|silloin}}
 * French: {{t|fr|alors}}, [[à]] [[cette]] [[époque]]-{{t|fr|là}}
 * German: {{t+|de|dann}}, {{t+|de|damals}}
-* Greek: {{t+|el|τότε}}
-* Hebrew: [[אז]] (az), {{t|he|אז|tr=az|sc=Hebr}}
+* Greek: {{t+|el|τότε|tr=tóte}}
+* Hebrew: {{t|he|אז|tr=az|sc=Hebr}}
 * Hindi: {{t|hi|तब|tr=tab|sc=Deva}}
 * Hungarian: {{t+|hu|akkor}}
 * Italian: {{t+|it|allora}}
-* Japanese: {{t|ja|そのとき|tr=sono toki}}, {{t|ja|その時点|tr=sono jiten}}
+* Japanese: {{t|ja|そのとき|tr=sono toki}} ({{t|ja|その時}}), {{t|ja|その時点|tr=そのじてん, sono jiten}}
 * Kurdish: [[hingê]], [[wê]] [[dem|demê]], [[wî]] [[çax|çaxî]], wî [[wext|wextî]], wê [[gav|gavê]]
 {{trans-mid}}
 * Latin: {{t+|la|tum}}, {{t+|la|deinde}}, {{t+|la|tunc}}
@@ -60,7 +60,7 @@ From {{etyl|enm}} {{term|then|then(ne)|lang=enm}}, {{term|than|than(ne)|lang=enm
 * Navajo: {{tø|nv|índa}}
 * Norwegian: {{t+|no|da}}, {{t|no|den gang}}
 * [[Old English]]: {{t-|ang|þa|alt=þā|xs=Old English}}
-* Polish: [[wówczas]], [[wtedy]], {{t|pl|wówczas}}, {{t|pl|wtedy}}
+* Polish: {{t|pl|wówczas}}, {{t|pl|wtedy}}
 * Portuguese: {{t|pt|então}}, [[naquele]] {{t|pt|tempo}}, [[naquela]] {{t|pt|época}}, [[nesse tempo]], [[nessa]] {{t|pt|época}}
 * Romanian: {{t+|ro|atunci}}
 * Russian: {{t+|ru|тогда|tr=togdá}}
@@ -76,9 +76,10 @@ From {{etyl|enm}} {{term|then|then(ne)|lang=enm}}, {{term|than|than(ne)|lang=enm
 
 {{trans-top|soon afterward}}
 * Albanian: [[pastaj]]
-* Arabic: {{Arab|[[ثم]]}} (thúmma)
+* Arabic: {{t|ar|ثم|tr=thúmma|sc=Arab}}
 * Armenian: [[հետո]] (heto)
-* Chinese: [[接著]], [[接着]] (jiēzhe)
+* Chinese:
+*: Mandarin: {{t|zh|接著|sc=Hani}}, {{t|zh|接着|tr=jiēzhe|sc=Hani}}
 * Czech: {{t+|cs|pak}}, {{t+|cs|potom}}
 * Dutch: [[toen]] ''(past tense)'', [[dan]] ''(present and future tenses)''
 * Esperanto: {{t-|eo|tiam|xs=Esperanto}}
@@ -109,11 +110,11 @@ From {{etyl|enm}} {{term|then|then(ne)|lang=enm}}, {{term|than|than(ne)|lang=enm
 
 {{trans-top|next in order}}
 * Albanian: [[pastaj]]
-* Arabic: {{Arab|[[ثم]]}} (thúmma)
+* Arabic: {{t|ar|ثم|tr=thúmma|sc=Arab}}
 * Armenian: [[հետո]] (heto)
 * Bengali: {{t|bn|এরপর|tr=erpôr|sc=Beng}}, {{t|bn|তারপর|tr=tarpôr|sc=Beng}}
 * Chinese:
-*: Mandarin: [[接著]], [[接着]] (jiēzhe), [[然後]], [[然后]] (ránhòu)
+*: Mandarin: {{t|zh|接著|sc=Hani}}, {{t|zh|接着|tr=jiēzhe|sc=Hani}}, {{t|zh|然後|sc=Hani}}, {{t|zh|然后|tr=ránhòu|sc=Hani}}
 * Czech: {{t+|cs|pak}}, {{t+|cs|potom}}
 * Dutch: {{t+|nl|dan}}
 * Esperanto: {{t-|eo|tiam|xs=Esperanto}}
@@ -121,7 +122,7 @@ From {{etyl|enm}} {{term|then|then(ne)|lang=enm}}, {{term|than|than(ne)|lang=enm
 * French: {{t+|fr|puis}}
 * German: {{t+|de|danach}}
 * Hungarian: {{t+|hu|aztán}}, {{t+|hu|majd}}
-* Japanese: {{t|ja|それから|tr=sorekara}}, {{t|ja|その後|tr=sono ato}}, {{t|ja|その後|tr=sono go}}, {{t|ja|次に|tr=tsugini}}
+* Japanese: {{t|ja|それから|tr=sorekara}}, {{t|ja|その後|tr=sono ato}}, {{t|ja|その後|tr=sono go}}, {{t|ja|次に|tr=tsugi-ni}}
 {{trans-mid}}
 * Kurdish: [[paşî]], [[dûre]], [[piştre]], [[dûvre]], [[peyre]]
 * Latin: {{t|la|deinde}}
@@ -141,9 +142,10 @@ From {{etyl|enm}} {{term|then|then(ne)|lang=enm}}, {{term|than|than(ne)|lang=enm
 {{trans-bottom}}
 
 {{trans-top|in that case}}
-* Arabic: {{Arab|[[ثم]]}} (thúmma)
+* Arabic: {{t|ar|ثم|tr=thúmma|sc=Arab}}
 * Armenian: [[ուրեմն]] (uremn)
-* Chinese: [[那麼]], [[那么]] (nàme), [[便]] (biàn)
+* Chinese:
+*: Mandarin: {{t|zh|那麼|sc=Hani}}, {{t|zh|那么|tr=nàme|sc=Hani}}, {{t|zh|便|tr=biàn|sc=Hani}}
 * Czech: {{t+|cs|pak}}, {{t+|cs|potom}}
 * Dutch: {{t+|nl|dan}}
 * Esperanto: {{t-|eo|tiam|xs=Esperanto}}
@@ -174,7 +176,7 @@ From {{etyl|enm}} {{term|then|then(ne)|lang=enm}}, {{term|than|than(ne)|lang=enm
 * Esperanto: {{t-|eo|tamen|xs=Esperanto}}
 * Finnish: {{t+|fi|toisaalta}}
 * Hungarian: {{t+|hu|ugyanakkor}}, {{t+|hu|viszont}}
-* Japanese: {{t|ja|そのとき|tr=sonotoki}}
+* Japanese: {{t|ja|そのとき|tr=sono toki}}
 * Kurdish: li [[mil|milê]] din, [[li]] [[alî]] [[dî]]
 * Latin: {{t|la|interim}}
 * Lithuanian: {{t-|lt|tada|xs=Lithuanian}}
