--- a/en/t/then.7353.wikitext
+++ b/en/t/then.7353.wikitext
@@ -77,7 +77,7 @@ From {{etyl|enm}} {{term|then|then(ne)|lang=enm}}, {{term|than|than(ne)|lang=enm
 {{trans-top|soon afterward}}
 * Albanian: [[pastaj]]
 * Arabic: {{t|ar|ثم|tr=thúmma|sc=Arab}}
-* Armenian: [[հետո]] (heto)
+* Armenian: [[հետո]] (heto), {{t|hy|հետո|tr=heto|sc=Armn}}
 * Chinese:
 *: Mandarin: {{t|zh|接著|sc=Hani}}, {{t|zh|接着|tr=jiēzhe|sc=Hani}}
 * Czech: {{t+|cs|pak}}, {{t+|cs|potom}}
@@ -85,13 +85,14 @@ From {{etyl|enm}} {{term|then|then(ne)|lang=enm}}, {{term|than|than(ne)|lang=enm
 * Esperanto: {{t-|eo|tiam|xs=Esperanto}}
 * Finnish: {{t+|fi|sitten}}
 * French: {{t+|fr|puis}}
+* Hindi: {{t|hi|फिर|tr=phir|sc=Deva}}
 * Hungarian: {{t+|hu|aztán}}, {{t+|hu|azután}}, {{t+|hu|majd}}
 * [[Ido]]: {{t+|io|lore|xs=Ido}}
 * Irish: {{t|ga|i ndiadh sin}}
 * Italian: {{t+|it|poi}}
 * Japanese: {{t|ja|それから|tr=sorekara}}, {{t|ja|その後|tr=sono ato}}, {{t|ja|その後|tr=sono go}}, {{t-|ja|そして|tr=soshite}}
-* Kurdish: [[paşî]], [[dûre]], [[piştre]], [[dûvre]], [[peyre]]
 {{trans-mid}}
+* Kurdish: [[paşî]], [[dûre]], [[piştre]], [[dûvre]], [[peyre]]
 * Latin: {{t|la|deinde}}
 * Malay: [[tidak lama kemudian]]
 * Norwegian: {{t+|no|så}}, {{t|no|deretter}}, {{t+|no|siden}}
@@ -106,6 +107,7 @@ From {{etyl|enm}} {{term|then|then(ne)|lang=enm}}, {{term|than|than(ne)|lang=enm
 * Spanish: {{t+|es|luego}}
 * Swedish: {{t+|sv|därpå}}, {{t+|sv|sen}}, {{t+|sv|sedan}}, {{t+|sv|så}}
 * [[Taos]]: [[yíane]]
+* Urdu: {{t|ur|پھر|tr=phir|sc=ur-Arab}}
 {{trans-bottom}}
 
 {{trans-top|next in order}}
@@ -114,7 +116,7 @@ From {{etyl|enm}} {{term|then|then(ne)|lang=enm}}, {{term|than|than(ne)|lang=enm
 * Armenian: [[հետո]] (heto)
 * Bengali: {{t|bn|এরপর|tr=erpôr|sc=Beng}}, {{t|bn|তারপর|tr=tarpôr|sc=Beng}}
 * Chinese:
-*: Mandarin: {{t|zh|接著|sc=Hani}}, {{t|zh|接着|tr=jiēzhe|sc=Hani}}, {{t|zh|然後|sc=Hani}}, {{t|zh|然后|tr=ránhòu|sc=Hani}}
+*: Mandarin: {{t|zh|接著|sc=Hani}}, {{t|zh|接着|tr=jiēzhe|sc=Hani}}, {{t|zh|然後|sc=Hani}}, {{t|zh|然后|tr=ránhòu|sc=Hani}}, {{t|zh|就|tr=jiù|sc=Hani}}
 * Czech: {{t+|cs|pak}}, {{t+|cs|potom}}
 * Dutch: {{t+|nl|dan}}
 * Esperanto: {{t-|eo|tiam|xs=Esperanto}}
@@ -152,6 +154,7 @@ From {{etyl|enm}} {{term|then|then(ne)|lang=enm}}, {{term|than|than(ne)|lang=enm
 * Finnish: {{t+|fi|niin}}
 * French: {{t+|fr|alors}}
 * German: {{t+|de|denn}}
+* Hindi: {{t|hi|तो|tr=to|sc=Deva}}
 * Hungarian: {{t+|hu|akkor}}
 * Italian: {{t+|it|allora}}
 * Japanese: {{t|ja|そのとき|tr=sonotoki}}, {{t-|ja|だから|tr=dakara}}
@@ -165,10 +168,11 @@ From {{etyl|enm}} {{term|then|then(ne)|lang=enm}}, {{term|than|than(ne)|lang=enm
 * Polish: [[to]], [[wówczas]]
 * Portuguese: [[então]], [[nesse]] {{t|pt|caso}}
 * Romanian: {{t+|ro|atunci}}
-* Russian: {{t+|ru|тогда|tr=togdá}}
+* Russian: {{t+|ru|тогда|tr=togdá}}, {{t|ru|в таком случае|tr=v takóm slúčaje|sc=Cyrl}}
 * [[Scottish Gaelic]]: {{t-|gd|ma-thà|xs=Scottish Gaelic}}, {{t-|gd|a-rèist|xs=Scottish Gaelic}}
 * Spanish: {{t+|es|entonces}}
 * Swedish: {{t|sv|alltså}}, {{t|sv|då}}, {{t|sv|i så fall}}
+* Urdu: {{t|ur|تو|tr=to|sc=ur-Arab}}
 {{trans-bottom}}
 
 {{trans-top|at the same time; on the other hand}}
