t+tr:[[kan dolaşımı]] t+az:[[qan dövranı]] ([[WT:EDIT|Assisted]]) <pulmonary circulation#11398666>

--- a/en/p/pulmonary circulation.856360.wikitext
+++ b/en/p/pulmonary circulation.856360.wikitext
@@ -7,9 +7,11 @@
 
 ====Translations====
 {{trans-top|part of blood circulation}}
+* [[Azeri]]: {{t|az|qan dövranı}}
 * Finnish: {{t+|fi|pieni verenkierto}}
 {{trans-mid}}
 * Latin: [[circulatio pulmonalis]], [[circulatio minor]]
+* Turkish: {{t|tr|kan dolaşımı}}
 {{trans-bottom}}
 
 ====See also====
