--- a/en/p/pulmonary circulation.856360.wikitext
+++ b/en/p/pulmonary circulation.856360.wikitext
@@ -7,11 +7,11 @@
 
 ====Translations====
 {{trans-top|part of blood circulation}}
-* [[Azeri]]: {{t|az|qan dövranı}}
+* [[Azeri]]: {{t|az|kiçik qan dövranı}}
 * Finnish: {{t+|fi|pieni verenkierto}}
 {{trans-mid}}
 * Latin: [[circulatio pulmonalis]], [[circulatio minor]]
-* Turkish: {{t|tr|kan dolaşımı}}
+* Turkish: {{t|tr|küçük kan dolaşımı}}
 {{trans-bottom}}
 
 ====See also====
