--- a/en/b/bleed.6801.wikitext
+++ b/en/b/bleed.6801.wikitext
@@ -128,6 +128,11 @@ From {{etyl|ang}} {{term|bledan|lang=ang}}
 * {{R:Century 1911}}
 * {{R:Webster 1913}}
 
+===Noun===
+{{en-noun}}
+
+# An incident of bleeding, as in [[haemophilia]].
+
 [[Category:Bodily fluids]]
 [[Category:English ergative verbs]]
 [[Category:English irregular verbs]]
