--- a/en/p/periodic comet.802781.wikitext
+++ b/en/p/periodic comet.802781.wikitext
@@ -9,9 +9,7 @@
 {{en-noun|sg=[[periodic]] [[comet]]}}
 
 #{{astronomy}} A comet which [[orbit]]s the [[Sun]] and which returns to the innermost point of its orbit at known, [[regular]] [[intervals]].
-
-====Quotations====
-*'''1880''', Lewis Swift, "The New '''Periodic Comet'''," ''Science'', vol. 1, no. 21, p. 258,
-*:The computation of the elements of its orbit reveals the fact that they are almost identical with those of Comet III, 1869, and hence it becomes what in astronomical language is called a '''periodic comet'''.
-*'''2001''', P. Clay Sherrod and Gian Trotta, "[http://www.space.com/SpaceReportersNetworkAstronomyDiscoveries/leonids_history_011108.html A History of the Leonid Storm]," ''SPACE.com'', 8 Nov.,
-*:Comet Temple-Tuttle is what astronomers call a "'''periodic comet'''," one of hundreds that routinely and predictably continue to orbit the sun.
+#*'''1880''', Lewis Swift, "The New '''Periodic Comet'''," ''Science'', vol. 1, no. 21, p. 258,
+#*:The computation of the elements of its orbit reveals the fact that they are almost identical with those of Comet III, 1869, and hence it becomes what in astronomical language is called a '''periodic comet'''.
+#*'''2001''', P. Clay Sherrod and Gian Trotta, "[http://www.space.com/SpaceReportersNetworkAstronomyDiscoveries/leonids_history_011108.html A History of the Leonid Storm]," ''SPACE.com'', 8 Nov.,
+#*:Comet Temple-Tuttle is what astronomers call a "'''periodic comet'''," one of hundreds that routinely and predictably continue to orbit the sun.
