/* Related terms */ one more <attend#11418934>

--- a/en/a/attend.7359.wikitext
+++ b/en/a/attend.7359.wikitext
@@ -20,8 +20,9 @@ From {{etyl|fro}} {{term|atendre}} < {{etyl|la}} {{term|attendere||to stretch to
 * [[attendance]]
 {{rel-bottom}}
 {{rel-top|to give attention to}}
-* [[attention]]
 * [[attendant]]
+* [[attention]]
+* [[attentive]]
 {{rel-bottom}}
 
 ====Translations====
