--- a/en/b/bled.6802.wikitext
+++ b/en/b/bled.6802.wikitext
@@ -13,7 +13,7 @@
 
 ==French==
 ===Etymology===
-From {{etyl|arz|fr}}, from {{etyl|ar|fr}} {{term|بلاد|tr=bilād|lang=ar}}
+From {{etyl|arq|fr}}, from {{etyl|ar|fr}} {{term|بلاد|tr=bilād|lang=ar}}
 
 ===Pronunciation===
 *{{IPA|/blɛd/|lang=fr}}
