--- a/en/m/mill.4306.wikitext
+++ b/en/m/mill.4306.wikitext
@@ -198,6 +198,7 @@ From the noun ''mill''
 * Russian: {{t|ru|молоть|tr=molót'}} {{impf}}, {{t|ru|смолоть|tr=smolót'}} {{pf.}}
 * [[Scottish Gaelic]]: {{t-|gd|meil|xs=Scottish Gaelic}}
 * Spanish: {{t|es|moler}}
+* [[Volapük]]: {{t|vo|mülön}}
 {{trans-bottom}}
 
 {{trans-top|shape, polish, etc, using a machine}}
