--- a/en/q/quadruped.4320.wikitext
+++ b/en/q/quadruped.4320.wikitext
@@ -3,11 +3,11 @@
 ===Noun===
 {{en-noun}}
 
-# a [[four-footed]] [[animal]]
+# a [[four-footed]] or [[four-legged]] [[animal]]
 # a [[mammal]] [[ambulating]] [[on all fours]]
 
 ====Translations====
-{{trans-top|a four-footed animal}}
+{{trans-top|a four-footed or four-legged animal}}
 * Dutch: [[viervoeter]] {{m}}
 * Finnish: {{t-|fi|nelijalkainen}}
 * French: {{t+|fr|quadrupède|m}}
