--- a/en/b/blow.6803.wikitext
+++ b/en/b/blow.6803.wikitext
@@ -11,7 +11,7 @@
 From {{etyl|ang|en}} {{term|blawan|blāwan|lang=ang}}, from {{proto|Germanic|blēanan}} (compare German {{term|blähen|lang=de}}), from {{proto|Indo-European|bhle-}} 'to swell, blow up' (compare Latin {{term|flare|lang=la}} 'to blow', Armenian {{term|bełun}} 'fertile').
 
 ====Verb====
-{{en-verb|blows|blowing|'''[[blew]]''' or (''dialect'') '''[[blowed]]'''|'''[[blown]]''' or (''dialect'') '''[[blowed]]'''}}
+{{en-verb|blows|blowing|'''[[blew]]'''|'''[[blown]]'''}}
 
 # {{intransitive}} To produce an [[air]] [[current]].<!--activity-->
 #* '''1606''', [[w:William Shakespeare|William Shakespeare]], ''King Lear'', act 3, sc. 2:
