--- a/en/t/thing.7362.wikitext
+++ b/en/t/thing.7362.wikitext
@@ -162,7 +162,7 @@ Originally meaning an assembly, that handled political and court issues. Later a
 * Italian: {{t+|it|cosa|f}}
 * Japanese: {{t|ja|物|tr=[[もの]], mono|sc=Jpan}}
 * Korean: {{t|ko|물건|tr=mulgeon|sc=Kore}}
-* Latin: {{t+|la|res|f|alt=rēs}}
+* Latin: {{t+|la|res|f|alt=rēs}}, {{t|la|ens|n}}
 {{trans-mid}}
 * Latvian: {{t+|lv|lieta|xs=Latvian}}
 * Lithuanian: {{t+|lt|daiktas|m|xs=Lithuanian}}, {{t-|lt|dalykas|m|xs=Lithuanian}}
