--- a/en/b/bend.6792.wikitext
+++ b/en/b/bend.6792.wikitext
@@ -3,7 +3,7 @@
 [[File:Grand_Canyon_Horse_Shoe_Bend_MC.jpg|thumb|A bend in a river]]
 
 ===Etymology===
-From {{etyl|enm}} {{term|benden}} < {{etyl|ang}} {{term|bendan}} to bind or bend (a bow).
+From {{etyl|enm}} {{term|benden}}, from {{etyl|ang}} {{term|bendan||to bind or bend (a bow), fetter, restrain|lang=ang}}, from {{proto|Germanic|bandijanan|to bend|lang=en}}. Cognate with {{etyl|gmh|-}} {{term|benden||to fetter|lang=gmh}}, {{term|da|-}} {{term|bænde||to bend|lang=da}}, {{etyl|is|-}} {{term|benda||to bend|lang=is}}. More at {{l|en|band}}.
 
 ===Pronunciation===
 * {{IPA|/bɛnd/}}
