/* English */ debold, rm encyclopedic content, pedia, alt forms <CD-ROM#11445580>

--- a/en/c/CD-ROM.26226.wikitext
+++ b/en/c/CD-ROM.26226.wikitext
@@ -1,12 +1,16 @@
 ==English==
+===Alternative forms===
+*[[CD ROM]]
 ===Pronunciation===
 * {{IPA|/si-di-rɒm/}}
 
 ==={{acronym}}===
-{{wikipedia}}
-'''CD-ROM''' ''or'' '''[[CD ROM]]'''
+{{en-noun|sg=[[CD]]-[[ROM]]}}
 
-# Compact Disk - Read Only Memory.  A device that can read [[CD]]s (Compact Disks), but can not write to them.  Additionally, this is also a class of Compact Disks that are manufactured with the data and shipped, but cannot be written to at all.
+# [[compact disk]] - [[read only memory]].
+
+===See also===
+* {{pedia}}
 
 [[cs:CD-ROM]]
 [[de:CD-ROM]]
