--- a/en/b/bubble.7366.wikitext
+++ b/en/b/bubble.7366.wikitext
@@ -20,6 +20,16 @@ Partly imitative, also influenced by {{term|burble}}.
 # {{obsolete}} Someone who has been ‘bubbled’ or [[fooled]]; a [[dupe]].
 #* '''1749''', Henry Fielding, ''Tom Jones'', Folio Society 1979, p. 15:
 #*: For no woman, sure, will plead the passion of love for an excuse.  This would be to own herself the mere tool and '''bubble''' of the man.
+# {{figurative}} {{rfdef}}
+#* {{quote-news
+|year=2011
+|date=January 23
+|author=Alistair Magowan 
+|title=Blackburn 2 - 0 West Brom
+|work=BBC
+|url=http://news.bbc.co.uk/sport2/hi/football/eng_prem/9366756.stm
+|page=
+|passage=Thomas, so often West Brom's most positive attacker down their left side and up against Salgado, twice almost burst the '''bubble''' of excitement around the ground but he had two efforts superbly saved by Robinson. }}
 
 ====Translations====
 {{trans-top|spherically contained volume of air}}
@@ -115,6 +125,7 @@ Partly imitative, also influenced by {{term|burble}}.
 * [[bubble wrap]]
 {{rel-mid}}
 * [[bubble and squeak]]
+* [[burst someone's bubble]]
 * [[housing bubble]]
 * [[land bubble]]
 * [[stock bubble]]
