--- a/en/g/grognard.855664.wikitext
+++ b/en/g/grognard.855664.wikitext
@@ -7,7 +7,7 @@ From {{etyl|fr|en}} {{term|grognard||lang=fr|old soldier}}
 {{en-noun}}
 
 # An [[old]] [[soldier]].
-# {{games|slang}} Someone who [[enjoys]] playing [[board]] [[wargames]].
+# {{games|slang}} Someone who [[enjoys]] playing [[board]] [[wargames]], particularly the counter-heavy strategy board wargames from the 1970s and 1980s.
 # {{computer games|slang}} Inside the [[computer]] game development industry, a game [[fan]] who will buy every game released in a certain [[genre ]]of computer game ([[RTS]], or computer role-playing game, etc.).
 
 ----
