--- a/en/p/Panchen Lama.741373.wikitext
+++ b/en/p/Panchen Lama.741373.wikitext
@@ -7,7 +7,7 @@
 ===Noun===
 {{en-noun}}
 
-# (''Tibetan Buddhism'') The second-highest ranking [[lama]] of the [[Gelug]] sect of Tibetan Buddhism, after the [[Dalai Lama]].
+# {{context|Tibetan Buddhism}} The second-highest ranking [[lama]] of the [[Gelug]] sect of Tibetan Buddhism, after the [[Dalai Lama]].
 
 ====Translations====
 {{trans-top|second-highest ranking lama of the Gelug sect of Tibetan Buddhism}}
