/* Translations */ <terrestrial planet#11464953>

--- a/en/t/terrestrial planet.854976.wikitext
+++ b/en/t/terrestrial planet.854976.wikitext
@@ -32,5 +32,5 @@
 
 ====Translations====
 * Dutch: [[aardse planeet]]
-
+* Romanian: [[terestru|terestrială]] [[planetă]] {{f}}
 [[Category:Planets]]
