--- a/en/p/positronium.746650.wikitext
+++ b/en/p/positronium.746650.wikitext
@@ -8,6 +8,7 @@
 
 ====Translations====
 {{trans-top|exotic atom}}
+* [[Ido]]: {{t|io|positronio}}
 * Italian: {{t-|it|positronio|m}}
 {{trans-mid}}
 * Spanish: {{t+|es|positronio|m}}
