--- a/en/m/maximum.34063.wikitext
+++ b/en/m/maximum.34063.wikitext
@@ -43,6 +43,7 @@ French from {{etyl|la}} ''[[#Latin|maximum]]''.
 * Russian: {{t+|ru|максимум|m|tr=máksimum}}
 * Spanish: {{t+|es|máximo}}
 * [[Telugu]]: [[గరిష్ఠం]] (garishThaM)
+* Welsh: {{t|cy|uchafswm}}
 {{trans-bottom}}
 
 {{trans-top|math: greatest value}}
