--- a/en/h/hangars.746881.wikitext
+++ b/en/h/hangars.746881.wikitext
@@ -16,6 +16,15 @@
 
 # {{plural of|[[hangar]]|lang=fr}}
 
+----
+
+==Swedish==
+
+===Noun===
+{{infl|sv|noun form}}
+
+# {{sv-noun-form-indef-gen|hangar}}
+
 [[ar:hangars]]
 [[fr:hangars]]
 [[my:hangars]]
