t+hu:[[igen]] ([[WT:EDIT|Assisted]]) <yeah#11524283>

--- a/en/y/yeah.4305.wikitext
+++ b/en/y/yeah.4305.wikitext
@@ -31,6 +31,7 @@ From {{etyl|ang}} {{term|gea|ġēa|lang=ang}}, in turn from {{etyl|gem}} *{{term
 * French: {{t+|fr|ouais}}
 * German: {{t+|de|ja}}
 * Hindi: [[हाँ]] (hā̃)
+* Hungarian: {{t|hu|igen}}
 * Icelandic: {{t+|is|já}}
 * [[Interlingua]]: [[si#Interlingua|si]]
 * Italian: {{t+|it|si}},  {{t+|it|già}}
