--- a/en/y/yeah.4305.wikitext
+++ b/en/y/yeah.4305.wikitext
@@ -22,6 +22,7 @@ From {{etyl|ang}} {{term|gea|ġēa|lang=ang}}, in turn from {{etyl|gem}} *{{term
 {{trans-top|yes}}
 * Arabic: {{t-|ar|أيوة|tr='áywa}} (''Eastern Arabic''), {{t|ar|إية|tr='íyya}} (''Western Arabic'')
 * Bosnian: {{t-|bs|ja}}
+* [[Catalan]]: {{t|ca|sí}}
 * Chinese:
 *: Mandarin: {{t|cmn|是啊|tr=shì a|sc=Hani}},  {{t|cmn|對啊|sc=Hani}},  {{t|cmn|对啊|tr=duì a|sc=Hani}}
 * Croatian: {{t+|hr|ja}}
@@ -35,8 +36,8 @@ From {{etyl|ang}} {{term|gea|ġēa|lang=ang}}, in turn from {{etyl|gem}} *{{term
 * Icelandic: {{t+|is|já}}
 * [[Interlingua]]: [[si#Interlingua|si]]
 * Italian: {{t+|it|si}},  {{t+|it|già}}
-* Japanese: {{t-|ja|うん|tr=un}},  {{t+|ja|そう|tr=sō}},  {{t+|ja|ええ|tr=ē}},  {{t+|ja|ああ|tr=ā}}
 {{trans-mid}}
+* Japanese: {{t-|ja|うん|tr=un}},  {{t+|ja|そう|tr=sō}},  {{t+|ja|ええ|tr=ē}},  {{t+|ja|ああ|tr=ā}}
 * Navajo: {{tø|nv|wehee}}
 * Persian: {{t+|fa|بله}}
 * Polish: {{t+|pl|tak}}
