--- a/en/q/quadrant.4317.wikitext
+++ b/en/q/quadrant.4317.wikitext
@@ -14,6 +14,7 @@ From {{etyl|la}} {{term|quadrantem|lang=la}}, accusative singular of {{term|quad
 
 ====Translations====
 {{trans-top|section}}
+* [[Catalan]]: {{t|ca|quadrant|m}}
 * Czech: {{t+|cs|kvadrant|m}}
 * Dutch: {{t-|nl|kwadrant|n}}
 * Finnish: {{t-|fi|kvadrantti}}
@@ -25,6 +26,7 @@ From {{etyl|la}} {{term|quadrantem|lang=la}}, accusative singular of {{term|quad
 {{trans-bottom}}
 
 {{trans-top|region of the Cartesian plane}}
+* [[Catalan]]: {{t|ca|quadrant|m}}
 * Czech: {{t+|cs|kvadrant|m}}
 * French: {{t+|fr|quadrant|m}}
 * German: {{t-|de|Quadrant|m}}
@@ -36,6 +38,7 @@ From {{etyl|la}} {{term|quadrantem|lang=la}}, accusative singular of {{term|quad
 {{trans-bottom}}
 
 {{trans-top|fourth of a circle}}
+* [[Catalan]]: {{t|ca|quadrant|m}}
 * Czech: {{t+|cs|kvadrant|m}}
 * Dutch: {{t-|nl|kwadrant|n}}
 * Finnish: {{t-|fi|kvadrantti}}
