t+ca:[[quadrant]] ([[WT:EDIT|Assisted]]) <quadrant#11527834>

--- a/en/q/quadrant.4317.wikitext
+++ b/en/q/quadrant.4317.wikitext
@@ -49,6 +49,7 @@ From {{etyl|la}} {{term|quadrantem|lang=la}}, accusative singular of {{term|quad
 {{trans-bottom}}
 
 {{trans-top|measuring device}}
+* [[Catalan]]: {{t|ca|quadrant|m}}
 * Czech: {{t+|cs|kvadrant|m}}
 * Dutch: {{t|nl|kwadrant|n}}
 * Finnish: {{t-|fi|kvadrantti}}
