--- a/en/j/Japetus.741397.wikitext
+++ b/en/j/Japetus.741397.wikitext
@@ -17,9 +17,12 @@
 * {{hyphenation|Ja|pe|tus}}
 
 ===Proper noun===
-{{fi-noun|Japetu|type=seos|proper=true}}
+{{fi-noun|proper=true}}
 
 # {{astronomy|lang=fi}} the moon [[Iapetus]]
+
+====Declension====
+{{fi-decl-vastaus|Japetunopl=1}}
 
 ===See also===
 * [[Iapetos]]
