--- a/en/j/Japetus.741397.wikitext
+++ b/en/j/Japetus.741397.wikitext
@@ -22,7 +22,7 @@
 # {{astronomy|lang=fi}} the moon [[Iapetus]]
 
 ====Declension====
-{{fi-decl-vastaus|Japetunopl=1}}
+{{fi-decl-vastaus|Japetu|nopl=1}}
 
 ===See also===
 * [[Iapetos]]
