--- a/en/p/pledge.7357.wikitext
+++ b/en/p/pledge.7357.wikitext
@@ -2,7 +2,7 @@
 ==English==
 
 ===Pronunciation===
-* {{IPA|/pledʒ/}}, {{SAMPA|/pledZ/}}
+* {{IPA|/plɛdʒ/}}, {{SAMPA|/plEdZ/}}
 * {{audio|en-us-pledge.ogg|Audio (US)}}
 * {{rhymes|ɛdʒ}}
 
