--- a/en/a/aeronautically.856000.wikitext
+++ b/en/a/aeronautically.856000.wikitext
@@ -3,7 +3,7 @@
 ===Adverb===
 {{en-adv}}
 
-# In a [[aeronautically]] manner; with respect to [[aeronautics]] or [[aviation]].
+# In a [[aeronautical]] manner; with respect to [[aeronautics]] or [[aviation]].
 #: ''With no paved runways, the country was '''aeronautically''' deficient.''
 
 [[vi:aeronautically]]
