tgloss:"electricity from the grid" ([[WT:EDIT|Assisted]]) <grid electricity#11610180>

--- a/en/g/grid electricity.776660.wikitext
+++ b/en/g/grid electricity.776660.wikitext
@@ -6,7 +6,7 @@
 # Electric energy delivered to a consumer from the [[w:public electricity network|public electricity network]].
 
 ====Translations====
-{{trans-top}}
+{{trans-top|electricity from the grid}}
 * Finnish: {{t-|fi|verkkosähkö}}
 {{trans-mid}}
 {{trans-bottom}}
