--- a/en/q/qua.4315.wikitext
+++ b/en/q/qua.4315.wikitext
@@ -89,7 +89,7 @@ To ask for an object, use ''[[quan]]'' instead.
 
 ====See also====
 * [[là#Italian|là]]
-* [[li#Italian|li]]
+* [[li#Italian|lì]]
 * [[qui#Italian|qui]]
 
 ----
