--- a/en/r/rabbit.8241.wikitext
+++ b/en/r/rabbit.8241.wikitext
@@ -95,7 +95,7 @@ From {{etyl|enm}} {{term|rabet|lang=enm}}, from {{etyl|frm}} dialect (compare {{
 *: Sorani: {{ku-Arab|[[که‌روێشک]]}} (kêrwişk)
 * [[Ladin]]: [[conicio]]
 * [[Ladino]]: [[konejo]]
-* Latin: {{t+|la|cuniculus|m}}
+* Latin: {{t+|la|cuniculus|alt=cunīculus|m}}
 {{trans-mid}}
 * Latvian: [[trusis]]
 * Lithuanian: {{t+|lt|triušis|xs=Lithuanian}}
