t+fa:[[پس]] t+uk:[[тоді]] t-balance t+be:[[тады]] ([[WT:EDIT|Assisted]]) <then#11636906>

--- a/en/t/then.7353.wikitext
+++ b/en/t/then.7353.wikitext
@@ -36,6 +36,7 @@ From {{etyl|enm}} {{term|then|then(ne)|lang=enm}}, {{term|than|than(ne)|lang=enm
 {{trans-top|at that time}}
 * Albanian: {{t+|sq|atëherë|xs=Albanian}}
 * Arabic: {{t|ar|ثم|tr=thúmma|sc=Arab}}
+* Belarusian: {{t|be|тады|tr=tadý|sc=Cyrl}}
 * Bengali: {{t|bn|তখন|tr=tôkhôn|sc=Beng}}
 * [[Catalan]]: [[llavors]]
 * Chinese:
@@ -52,8 +53,8 @@ From {{etyl|enm}} {{term|then|then(ne)|lang=enm}}, {{term|than|than(ne)|lang=enm
 * Hungarian: {{t+|hu|akkor}}
 * Italian: {{t+|it|allora}}
 * Japanese: {{t|ja|そのとき|tr=sono toki}} ({{t|ja|その時}}), {{t|ja|その時点|tr=そのじてん, sono jiten}}
-* Kurdish: [[hingê]], [[wê]] [[dem|demê]], [[wî]] [[çax|çaxî]], wî [[wext|wextî]], wê [[gav|gavê]]
 {{trans-mid}}
+* Kurdish: [[hingê]], [[wê]] [[dem|demê]], [[wî]] [[çax|çaxî]], wî [[wext|wextî]], wê [[gav|gavê]]
 * Latin: {{t+|la|tum}}, {{t+|la|deinde}}, {{t+|la|tunc}}
 * Lithuanian: {{t-|lt|tada|xs=Lithuanian}}
 * Malay: [[pada masa yang sama]]
@@ -146,6 +147,7 @@ From {{etyl|enm}} {{term|then|then(ne)|lang=enm}}, {{term|than|than(ne)|lang=enm
 {{trans-top|in that case}}
 * Arabic: {{t|ar|ثم|tr=thúmma|sc=Arab}}
 * Armenian: {{t|hy|ուրեմն|tr=uremn|sc=Armn}}
+* Belarusian: {{t|be|тады|tr=tadý|sc=Cyrl}}
 * Chinese:
 *: Mandarin: {{t|zh|那麼|sc=Hani}}, {{t|zh|那么|tr=nàme|sc=Hani}}, {{t|zh|便|tr=biàn|sc=Hani}}
 * Czech: {{t+|cs|pak}}, {{t+|cs|potom}}
@@ -165,6 +167,7 @@ From {{etyl|enm}} {{term|then|then(ne)|lang=enm}}, {{term|than|than(ne)|lang=enm
 * Malay: [[oleh sebab yang demikian]]
 * Norwegian: {{t+|no|da}}, {{t|no|i så fall}}
 * [[Old English]]: {{t-|ang|þa|alt=þā|xs=Old English}}
+* Persian: {{t|fa|پس|tr=pas|sc=fa-Arab}}
 * Polish: [[to]], [[wówczas]]
 * Portuguese: [[então]], [[nesse]] {{t|pt|caso}}
 * Romanian: {{t+|ro|atunci}}
@@ -172,6 +175,7 @@ From {{etyl|enm}} {{term|then|then(ne)|lang=enm}}, {{term|than|than(ne)|lang=enm
 * [[Scottish Gaelic]]: {{t-|gd|ma-thà|xs=Scottish Gaelic}}, {{t-|gd|a-rèist|xs=Scottish Gaelic}}
 * Spanish: {{t+|es|entonces}}
 * Swedish: {{t|sv|alltså}}, {{t|sv|då}}, {{t|sv|i så fall}}
+* Ukrainian: {{t|uk|тоді|tr=todí|sc=Cyrl}}
 * Urdu: {{t|ur|تو|tr=to|sc=ur-Arab}}
 {{trans-bottom}}
 
