--- a/en/b/behold.6790.wikitext
+++ b/en/b/behold.6790.wikitext
@@ -9,7 +9,7 @@
 * {{audio|en-us-behold.ogg|Audio (US)}}
 
 ===Verb===
-{{en-verb|beholds|beholding|beheld|'''[[beheld]]''' or rarely '''[[beholden]]'''}}
+{{en-verb|beholds|beholding|beheld|'{{term|beheld}}' or rarely '{{term|beholden}}'}}
 
 # {{transitive}} To [[see]], or to [[look at]].
 
@@ -21,13 +21,13 @@
 * Aramaic:
 *: Syriac: [[ܗܐ]] (hā, ho)
 *: Hebrew: [[הא]] (hā, ho)
-* Bulgarian: {{t|bg|гледам}},  {{t+|bg|виждам}}
+* Bulgarian: {{t|bg|гледам}}, {{t+|bg|виждам}}
 * [[Catalan]]: [[mirar]], [[vigilar]]
 * Dutch: {{t+|nl|aanschouwen}}
 * Finnish: [[katsoa]] (1)
 * French: {{t+|fr|regarder}}, {{t+|fr|voir}}
 * German: {{t+|de|betrachten}}, {{t+|de|sehen}}, {{t+|de|schauen}}
-* Hungarian: {{t+|hu|meglát}},  {{t+|hu|észrevesz}},  {{t|hu| megpillant}}
+* Hungarian: {{t+|hu|meglát}}, {{t+|hu|észrevesz}}, {{t|hu| megpillant}}
 * Icelandic: {{t+|is|sjá}}
 {{trans-mid}}
 * Italian: {{t+|it|guardare}}
@@ -61,7 +61,7 @@ From {{etyl|gml|da}} {{term|beholt|lang=gml}}, {{term|behalt|lang=gml}}.
 ====Noun====
 {{infl|da|noun}}
 
-# {{qualifier|archaic}} [[haven]], [[refuge]]
+# {{qualifier|archaic|lang=da}} [[haven]], [[refuge]]
 # {{rfc-sense}} ''i behold''
 ## [[safe]], [[intact]]
 ## [[left]]
@@ -69,6 +69,7 @@ From {{etyl|gml|da}} {{term|beholt|lang=gml}}, {{term|behalt|lang=gml}}.
 ## [[safe]], [[safely]]
 ## [[safe and sound]], safe and [[well]]
 {{attention|da}}
+
 =====Derived terms=====
 * [[i behold]]
 * [[i god behold]]
