t+zh:[[啊]] ([[WT:EDIT|Assisted]]) <yeah#11639470>

--- a/en/y/yeah.4305.wikitext
+++ b/en/y/yeah.4305.wikitext
@@ -24,7 +24,7 @@ From {{etyl|ang}} {{term|gea|ġēa|lang=ang}}, in turn from {{etyl|gem}} *{{term
 * Bosnian: {{t-|bs|ja}}
 * [[Catalan]]: {{t|ca|sí}}
 * Chinese:
-*: Mandarin: {{t|cmn|是啊|tr=shì a|sc=Hani}},  {{t|cmn|對啊|sc=Hani}},  {{t|cmn|对啊|tr=duì a|sc=Hani}}
+*: Mandarin: {{t|cmn|是啊|tr=shì a|sc=Hani}},  {{t|cmn|對啊|sc=Hani}},  {{t|cmn|对啊|tr=duì a|sc=Hani}}, {{t|zh|啊|tr=à|sc=Hani}}
 * Croatian: {{t+|hr|ja}}
 * Czech: {{t+|cs|jo}}
 * Dutch: {{t+|nl|ja}}, {{t+|nl|jawel}}
