--- a/en/n/Num Lock.746598.wikitext
+++ b/en/n/Num Lock.746598.wikitext
@@ -1,12 +1,12 @@
 ==English==
-
+{{rfd|fragment=Start}}
 ===Alternative forms===
 * [[num lock]]
 
 ===Noun===
 {{en-noun|head=[[num|Num]] [[lock|Lock]]}}
 
-# {{computing}} A [[key]] on a standard extended [[keyboard]] which, when pressed, [[toggle]]s  the keys of the [[numeric]] [[keypad]] between [[cursor]] control functions and numeric [[input]] functions.
+# {{computing}} A [[key]] on a standard extended [[keyboard]] which, when pressed, [[toggle]]s the keys of the [[numeric]] [[keypad]] between [[cursor]] control functions and numeric [[input]] functions.
 
 ===See also===
 * {{list|en|computer keys}}
