--- a/en/-/-um.34068.wikitext
+++ b/en/-/-um.34068.wikitext
@@ -104,7 +104,29 @@ From the [[homographic]] [[w:Grammatical case|case]] endings of the [[nominative
 [[Category:Dutch suffixes|um]]
 
 ----
+==Scots==
 
+===Alternative forms===
+* {{l|sco|-im}}, {{l|sco|-om}}, {{l|sco|-am}}, {{l|sco|-em}}
+
+===Etymology 1===
+From {{etyl|enm|sco}}, from {{etyl|ang|sco}} {{term|-um|lang=ang}}, dative plural ending used to form adverbials.
+
+====Suffix====
+{{infl|sco|suffix}}
+
+# {{rare}} Used to form adverbs.
+#: {{term|legim||astride|lang=sco}}
+
+===Etymology 2===
+Probably of jocular formation, based partly on Latin {{term|-um|lang=la}} and partly an altered form of {{term|-ings|-in(g)s|lang=sco}}, a verbal noun ending.
+
+====Suffix====
+{{infl|sco|suffix}}
+
+# Added to nouns or verbs to form nouns with diminutive or hypocoristic force.
+
+----
 ==Turkish==
 
 ===Suffix===
