--- a/en/a/attend.7359.wikitext
+++ b/en/a/attend.7359.wikitext
@@ -10,9 +10,13 @@ From {{etyl|fro}} {{term|atendre}} < {{etyl|la}} {{term|attendere||to stretch to
 ===Verb===
 {{en-verb}}
 
-# {{transitive}} To be at an [[event]].
-#: ''Failing to '''attend''' the meeting nearly cost her her job.''
-# {{intransitive|construed with '''to'''}} To [[pay attention]] to; to [[commit]] oneself to; to give [[thought]] and [[care]] to.
+# {{archaic|transitive}} To [[listen]] to (something or someone). {{defdate|from 15th c.}}
+# {{archaic|intransitive}} To [[listen]] ({{term|to}}, {{term|unto}}). {{defdate|from 15th c.}}
+# {{intransitive}} To turn one's [[consideration]] ({{term|to}}); to [[deal]] with (a task, problem, concern etc.), to look after. {{defdate|from 15th c.}} 
+# {{transitive}} To [[wait upon]] as a [[servant]] etc.; to accompany to assist (someone). {{defdate|from 15th c.}}
+# {{transitive}} To be [[present]] at (an event or place) in order to take part in some action or proceedings. {{defdate|from 17th c.}}
+#*'''1994''', Nelson Mandela, ''Long Walk to Freedom'', Abacus 2010, p. 20:
+#*:I '''attended''' a one-room school next door to the palace and studied English, Xhosa, history and geography.
 
 ====Related terms====
 {{rel-top|to be at an event}}
@@ -26,7 +30,17 @@ From {{etyl|fro}} {{term|atendre}} < {{etyl|la}} {{term|attendere||to stretch to
 {{rel-bottom}}
 
 ====Translations====
-{{trans-top|to be at an event}}
+{{trans-top|to turn one's consideration to, deal with}}
+* Bulgarian: {{t|bg|обръщам внимание}},  {{t|bg|грижа се}},  {{t|bg|прислужвам}}
+* Finnish: {{t+|fi|huolehtia}}, {{t+|fi|pitää}} {{t+|fi|huoli|alt=huolta}},  {{t+|fi|hoitaa}} ([[tehtävä]]/[[asia]]/[[juttu]]/[[homma]])
+* German: {{t+|de|kümmern}}, {{t+|de|beachten}}
+{{trans-mid}}
+* [[Scottish Gaelic]]: {{t|gd|sgeadaich}}
+* Spanish: {{t|es|atender}}, {{t|es|ocuparse de}}
+* Welsh: [[gweini#Welsh|canolbwyntio ar]] [[ar#Welsh|ar]]
+{{trans-bottom}}
+
+{{trans-top|to be present at}}
 * Arabic: {{t|ar|حضر|tr=ḥaḍara}}
 * Bulgarian: {{t-|bg|присъствам}},  {{t+|bg|посещавам}}
 * Chinese:
@@ -45,20 +59,6 @@ From {{etyl|fro}} {{term|atendre}} < {{etyl|la}} {{term|attendere||to stretch to
 * Spanish: {{t-|es|asistir}}
 * Swedish: {{t-|sv|närvara}},  {{t+|sv|delta}}
 * Welsh: {{t|cy|mynychu|xs=Welsh}}
-{{trans-bottom}}
-
-{{trans-top|to pay attention to; to commit oneself to; to give thought and care to}}
-* Bulgarian: {{t|bg|обръщам внимание}},  {{t|bg|грижа се}},  {{t|bg|прислужвам}}
-* Finnish: {{t+|fi|huolehtia}}, {{t+|fi|pitää}} {{t+|fi|huoli|alt=huolta}},  {{t+|fi|hoitaa}} ([[tehtävä]]/[[asia]]/[[juttu]]/[[homma]])
-* German: {{t+|de|kümmern}}, {{t+|de|beachten}}
-{{trans-mid}}
-* [[Scottish Gaelic]]: {{t|gd|sgeadaich}}
-* Spanish: {{t|es|atender}}, {{t|es|ocuparse de}}
-* Welsh: [[gweini#Welsh|canolbwyntio ar]] [[ar#Welsh|ar]]
-{{trans-bottom}}
-
-{{checktrans-top}}
-* {{ttbc|fr}}: [[assister]] à (1)
 {{trans-bottom}}
 
 ----
