redirecting per outcome of [[WT:RFD]] discussion; do not reinstate as entry <take with a pinch of salt#11707078>

--- a/en/t/take with a pinch of salt.742298.wikitext
+++ b/en/t/take with a pinch of salt.742298.wikitext
@@ -1,10 +1,1 @@
-==English==
-{{rfd}}
-===Verb===
-'''[[take]] [[with]] [[a]] [[pinch]] [[of]] [[salt]]'''
-
-# {{idiom}} Not take entirely [[seriously]].
-
-[[Category:English verbs]]
-
-[[sv:take with a pinch of salt]]
+#redirect[[pinch of salt]]
