--- a/en/m/money bag.720269.wikitext
+++ b/en/m/money bag.720269.wikitext
@@ -1,3 +1,4 @@
+{{also|moneybag}}
 ==English==
 
 ===Noun===
@@ -8,7 +9,3 @@
 
 ===Anagrams===
 * [[bogey man#English|bogey man]], [[bogeyman#English|bogeyman]]
-
-[[et:moneybag]]
-[[my:moneybag]]
-[[zh:moneybag]]
