--- a/en/b/bleed.6801.wikitext
+++ b/en/b/bleed.6801.wikitext
@@ -14,7 +14,7 @@ From {{etyl|ang}} {{term|bledan|blēdan|lang=ang}} < {{proto|Germanic|blōþijan
 # {{intransitive|of an animal}} To [[lose]] [[blood]] through an [[injured]] [[blood vessel]].
 # {{transitive}} To [[let]] or [[draw]] [[blood]] from an animal.
 # {{transitive}} To [[take]] large amounts of [[money]] from.
-# {{transitive}} To steadily lose {something vital}.
+# {{transitive}} To steadily lose (something vital).
 #: ''The company was '''bleeding''' talent.''
 # {{intransitive|of an ink or dye}} To [[spread]] from the intended location and [[stain]] the surrounding [[cloth]] or [[paper]].
 # {{transitive}} To [[remove]] [[air]] bubbles from a [[pipe]] containing [[fluid]]s.
