--- a/en/p/Panchen Lama.741373.wikitext
+++ b/en/p/Panchen Lama.741373.wikitext
@@ -25,15 +25,15 @@
 * Hungarian: {{t|hu|Panchen Láma}}
 * Indonesian: {{t-|id|Panchen Lama|xs=Indonesian}}
 * Italian: {{t-|it|Panchen Lama}}
-* Japanese: {{t|ja|パンチェン・ラマ}}
+* Japanese: {{t|ja|パンチェン・ラマ|tr=panchen rama}}
 {{trans-mid}}
-* Korean: {{t|ko|판첸 라마|sc=Hang}}
+* Korean: {{t|ko|판첸 라마|sc=Hang|tr=panchen lama}}
 * Lithuanian: {{t|lt|Pančen Lama|xs=Lithuanian}}
 * {{trreq|ne}}
 * Norwegian: {{t-|no|Panchen Lama}}
 * Polish: {{t|pl|panczenlama|m}}
 * Portuguese: {{t-|pt|Panchen Lama}}
-* Russian: {{t|ru|Панчен-лама}}
+* Russian: {{t|ru|Панчен-лама|tr=Pánčen-láma|m}}
 * Slovene: {{t|sl|Pančen Lama}}
 * Spanish: {{t-|es|Panchen Lama}}
 * Swedish: {{t|sv|Panchen lama}}
