t+ca:[[apostar]] ([[WT:EDIT|Assisted]]) <bet#11762857>

--- a/en/b/bet.6795.wikitext
+++ b/en/b/bet.6795.wikitext
@@ -68,6 +68,7 @@
 * [[Basque]]: {{t|eu|apustu egin|xs=Basque}}
 * [[Breton]]: {{t|br|klaoustreañ|xs=Breton}}
 * Bulgarian: {{t|bg|обзалагам се}},  {{t|bg|басирам се}}
+* [[Catalan]]: {{t|ca|apostar}}
 * Chinese: {{zh-tsp|打賭|打赌|dǎdǔ}}
 * Czech: {{t-|cs|vsadit}}, {{t-|cs|vsadit}} se
 * Danish: {{t-|da|vædde}}
@@ -94,6 +95,7 @@
 
 {{trans-top|To be sure of something}}
 * Bulgarian: {{t|bg|сигурен съм}}
+* [[Catalan]]: {{t|ca|apostar}}
 * Czech: {{t-|cs|vsadit}} se
 * Dutch: {{t|nl|er op kunnen rekenen}}, {{t|nl|er van op aan kunnen}}
 * Latvian: {{t+|lv|būt|xs=Latvian}} [[pārliecināts|pārliecinātam]]
