--- a/en/y/yeah.4305.wikitext
+++ b/en/y/yeah.4305.wikitext
@@ -3,7 +3,7 @@
 
 ===Etymology===
 {{wikipedia|yes and no}}
-From American english, in turn from {{etyl|gem}} *{{term||jā}}. Cognate with Dutch {{term|ja|lang=nl}}, German {{term|ja|lang=de}} and Swedish {{term|ja|lang=sv}}. Related to existing English terms {{term|yes|lang=en}} and {{term|yea|lang=en}}.
+From American english, Related to existing English terms {{term|yes|lang=en}} and {{term|yea|lang=en}}.
 
 ===Pronunciation===
 * {{IPA|/jɛ/}}, {{IPAchar|/jɛə/}} or {{IPAchar|/jæ/}}
