--- a/en/r/rabbit.8241.wikitext
+++ b/en/r/rabbit.8241.wikitext
@@ -47,10 +47,10 @@ From {{etyl|enm}} {{term|rabet|lang=enm}}, from {{etyl|frm}} dialect (compare {{
 * [[Alabama]]: [[chokfi]]
 * Albanian: {{t-|sq|lepur i gropave|xs=Albanian}}
 * Arabic: {{t-|ar|ارنب|m|alt=أرْنَب|tr=’árnab}}
-* Armenian: [[ճագար]] (č̣agar), {{t|hy|ճագար|tr=č̣agar|sc=Armn}}
+* Armenian: {{t|hy|ճագար|tr=č̣agar|sc=Armn}}
 * [[Azeri]]: {{t+|az|dovşan|xs=Azeri}}
 * [[Basque]]: [[untxi]]
-* Belarusian: {{t-|be|трус|m|tr=trus|xs=Belarusian}}, {{t|be|кролік|m|tr=królik|sc=Cyrl}}, [[трусяня]]/[[трусяне]] {{f}}
+* Belarusian: {{t-|be|трус|m|tr=trus|xs=Belarusian}}, {{t|be|кролік|m|tr=królik|sc=Cyrl}} <!-- [[трусяня]] {{n}} [[трусяне]] {{p}} means baby rabbit(s) -->
 * Bengali: {{t|bn|খরগোশ|tr=khôrgosh|sc=Beng}}, {{t|bn|খরেগাশ|tr=khôrgosh|sc=Beng}}
 * Bosnian: {{t-|bs|zec|m}}, {{t-|bs|kunić|m}}
 * [[Breton]]: [[lapin]], [[konikl]]
