--- a/en/s/seize.26061.wikitext
+++ b/en/s/seize.26061.wikitext
@@ -106,7 +106,7 @@ From {{etyl|la|fr}} {{term|sedecim|sēdecim|lang=la}}.
 ====Derived terms====
 * [[seizième]]
 
-[[Category:English words not following the I before E rule]]
+[[Category:English words not following the I before E except after C rule]]
 
 [[bg:seize]]
 [[cy:seize]]
