--- a/en/r/Russian Soviet Federative Socialist Republic.741432.wikitext
+++ b/en/r/Russian Soviet Federative Socialist Republic.741432.wikitext
@@ -11,9 +11,10 @@
 
 ====Translations====
 {{trans-top| official name for modern day Russia before the collapse of the Soviet Union}}
+* Bengali: {{t-|bn|রাশিয়ান সোভিয়েত ফেডারেটিভ সোশালিস্ট রিপাবলিক}}
 * Finnish: [[Venäjän Sosialistinen Federatiivinen Neuvostotasavalta]]
-* [[Macedonian]]: {{t|mk|Руска Советска Федеративна Социјалистичка Република|f|tr=Rúska Sóvetska Federatívna Socijalístička Repúblika}}
 {{trans-mid}}
+* [[Macedonian]]: {{t|mk|Руска Советска Федеративна Социјалистичка Република|f|tr=Rúska Sóvetska Federatívna Socijalístička Repúblika}}
 * Russian: {{t-|ru|Российская Советская Федеративная Социалистическая Республика|f|tr=Rossíjskaja Sovétskaja Federatívnaja Sotsialistíčeskaja Respublika}}
 {{trans-bottom}}
 
