--- a/en/b/bound.6799.wikitext
+++ b/en/b/bound.6799.wikitext
@@ -38,7 +38,7 @@ See [[bind]]
 * Dutch: {{t+|nl|gehouden}}
 {{trans-mid}}
 * French: {{t+|fr|obligé}}, {{t+|fr|tenu}}
-* Italian: {{t|it|obbligato|m}}, {{t|it|tenuto|m}}
+* Italian: {{t|it|obbligato|m}}, {{t|it|confinato|m}}, {{t|it|tenuto|m}}
 {{trans-bottom}}
 
 {{trans-top|very likely to}}
