--- a/en/d/dame.26261.wikitext
+++ b/en/d/dame.26261.wikitext
@@ -145,6 +145,7 @@ From {{etyl|la|fr}} ''[[domina]]''
 
 ===Pronunciation===
 * {{IPA|/da.mə/|lang=fro}}
+* {{rhymes|a.mə|lang=fro}}
 
 ===Noun===
 {{fro-noun|f}}
