t+fa:[[پس]] ([[WT:EDIT|Assisted]]) <then#11980365>

--- a/en/t/then.7353.wikitext
+++ b/en/t/then.7353.wikitext
@@ -98,7 +98,7 @@ From {{etyl|enm}} {{term|then|then(ne)|lang=enm}}, {{term|than|than(ne)|lang=enm
 * Malay: [[tidak lama kemudian]]
 * Norwegian: {{t+|no|så}}, {{t|no|deretter}}, {{t+|no|siden}}
 * [[Old English]]: {{t-|ang|þa|alt=þā|xs=Old English}}
-* Persian: {{t|fa|سپس|tr=sepas|sc=fa-Arab}}
+* Persian: {{t|fa|سپس|tr=sepas|sc=fa-Arab}}, {{t|fa|پس|tr=pas|sc=fa-Arab}}
 * Polish: (a) [[następnie]], (a) {{t|pl|potem}}
 * Portuguese: [[então]], {{t|pt|depois}}, {{t|pt|em seguida}}
 * Romanian: {{t+|ro|apoi}}
