--- a/en/b/break.6806.wikitext
+++ b/en/b/break.6806.wikitext
@@ -254,6 +254,7 @@ The sense relating to a spell of weather is most likely to be used after a perio
 * {{trreq|mn}}
 * {{trreq|ang}}
 * Persian: {{t+|fa|شکستن|tr=šekastan|xs=Persian}}
+* Polish: {{t|pl|łamać}}, {{t|pl|rozbijać}}
 * Portuguese: [[quebrar]], [[partir]], [[romper]] (if flexible)
 * Romanian: {{t+|ro|rupe}}, {{t-|ro|frânge}}, {{t|ro|sfărâma}}
 * Russian: {{t|ru|разбивать|tr=razbivát’}} {{impf}}, {{t+|ru|разбить|tr=razbít’}} {{pf.}}
