/* Latin */ added pronoun meanings <qua#11999516>

--- a/en/q/qua.4315.wikitext
+++ b/en/q/qua.4315.wikitext
@@ -110,6 +110,22 @@ To ask for an object, use ''[[quan]]'' instead.
 # in so far as
 #: ''ens qua ens'' ("being as being")
 
+===Etymology 1===
+Inflection of {{term|qui|quī|who, which|lang=la}}
+
+====Pronoun====
+{{la-pronoun-form|quā}}
+
+# {{inflection of|qui|quī|abl|f|s|lang=la}}
+
+===Etymology 2===
+Inflection of {{term|quis||who?, what?|lang=la}}
+
+====Pronoun====
+{{la-pronoun-form|quā}}
+
+# {{inflection of|quis|quis|abl|f|s|lang=la}}
+
 ----
 
 ==Min Nan==
