t+eu:[[erbinude]] t-balance ([[WT:EDIT|Assisted]]) <weasel#12004882>

--- a/en/w/weasel.8232.wikitext
+++ b/en/w/weasel.8232.wikitext
@@ -29,6 +29,7 @@ The verb comes from the supposed cunningness of the weasel.
 ====Translations====
 {{trans-top|least weasel, ''Mustela nivalis''}}
 * Armenian: {{t-|hy|աքիս|tr=ak'is}}
+* [[Basque]]: {{t|eu|erbinude}}
 * [[Breton]]: {{t+|br|kaerell|xs=Breton}}
 * Chinese: {{t+|cmn|黄鼠狼|sc=Hani}} (huángshǔláng)
 * Czech: {{t-|cs|lasice|f}}
@@ -42,8 +43,8 @@ The verb comes from the supposed cunningness of the weasel.
 * Greek: {{t+|el|νυφίτσα|tr=nifítsa|f|sc=Grek}}
 * Hebrew: {{t|he|סמור|sc=Hebr|tr=samur}}
 * Hungarian: {{t+|hu|menyét}}
-* Irish: {{t|ga|bláthnaid ghallda|f}}
 {{trans-mid}}
+* Irish: {{t|ga|bláthnaid ghallda|f}}
 * Italian: {{t+|it|donnola|f}}
 * Japanese: {{t+|ja|飯綱}} (いいずな) (īzuna)
 * Korean: {{t-|ko|족제비|sc=Hang}} (jokjebi)
