--- a/en/c/cop.26062.wikitext
+++ b/en/c/cop.26062.wikitext
@@ -13,15 +13,25 @@ Possibly from {{etyl|frm|en}} {{term|capere||to capture|lang=frm}}, from {{etyl|
 ====Verb====
 {{en-verb|cop|p|ing}}
 
-# {{context|formerly|dialect|now|informal}} To [[capture]], get hold of, [[take]].
+# {{transitive|formerly|dialect|now|informal}} To [[capture]], get hold of, [[take]].
 #* '''2005,''' Martin Torgoff, ''Can't Find My Way Home'', Simon &amp; Schuster, page 10,
 #*: Heroin appeared on the streets of our town for the first time, and Innie watched helplessly as his sixteen-year-old brother began taking the train to Harlem to '''cop''' smack.
+# {{transitive}} To [[steal]].
+# {{transitive}} To [[adopt]].
+#: ''No need to '''cop''' an attitude with me, junior.''
+# {{intransitive|usually with "to"}} To [[admit]].
+#: ''Harold '''copped''' to being known as "Dirty Harry".''
+#*{{quote-book|title=Mr. Paradise|page=295|author=Elmore Leonard|year=2005|passage=He shot a guy in a bar on Martin Luther King Day and '''copped''' to first-degree manslaughter}}
 
 =====Translations=====
+{{trans-top|to capture, to take ''(informal)''}}
 * Bulgarian: [[хващам]], [[пипвам]], [[арестувам]]
+{{trans-mid}}
+{{trans-bottom}}
 
 =====Derived terms=====
 * [[cop a feel]]
+* [[cop a plea]]
 * [[cop off]]
 * [[cop on]]
 * [[cop out]], [[cop-out]]
