--- a/en/w/whithered.746848.wikitext
+++ b/en/w/whithered.746848.wikitext
@@ -6,7 +6,7 @@
 ===Verb===
 '''whithered'''
 
-# {{obsolete}} {{past of|[[whither]]}}
+# {{obsolete}} {{past of|[[whitherer]]}}
 
 [[fr:whithered]]
 [[mg:whithered]]
