--- a/en/b/break.6806.wikitext
+++ b/en/b/break.6806.wikitext
@@ -262,7 +262,7 @@ The sense relating to a spell of weather is most likely to be used after a perio
 * [[Scottish Gaelic]]: {{t-|gd|bris|xs=Scottish Gaelic}}
 * Slovene: [[zlomiti]] (two pieces), [[razbiti]] (more pieces)
 * Spanish: {{t+|es|romper}}, {{t+|es|quebrar}}
-* Swedish: {{t|sv|bryta}}, {{t|sv|ta sönder}} (''deliberately''), {{t|sv|ha sönder}} (''involunterally'') {{qualifier|familiar}}, {{t|sv|slå sönder}} (''violently'')
+* Swedish: {{t|sv|bryta}}, ta/ha/slå {{t|sv|sönder}}
 * Thai: {{Thai|[[แตก]]}} (dtàek), {{Thai|[[เลิก]]}} (lêrk)
 * Turkish: {{t+|tr|kırmak}}
 {{trans-bottom}}
@@ -300,7 +300,7 @@ The sense relating to a spell of weather is most likely to be used after a perio
 * [[Scottish Gaelic]]: {{t-|gd|bris|xs=Scottish Gaelic}}
 * Slovene: [[zlomiti se]]
 * Spanish: {{t+|es|romper}}
-* Swedish: {{t|sv|brytas}}
+* Swedish: {{t|sv|bryta|alt=brytas}}
 {{trans-bottom}}
 
 {{trans-top|transitive: of a bone, to cause to crack}}
@@ -416,7 +416,7 @@ The sense relating to a spell of weather is most likely to be used after a perio
 * [[Scottish Gaelic]]: {{t-|gd|bris|xs=Scottish Gaelic}}
 * Slovene: {{t-|sl|pokvariti}}
 * Swahili: [[kuvunja]]
-* Swedish: {{t|sv|ha sönder}}, {{t|sv|ta sönder}}
+* Swedish: ha/ta {{t|sv|sönder}}
 {{trans-bottom}}
 
 {{trans-top|of a wave, to collapse into a surf}}
