--- a/en/b/break.6806.wikitext
+++ b/en/b/break.6806.wikitext
@@ -601,7 +601,7 @@ The sense relating to a spell of weather is most likely to be used after a perio
 {{trans-mid}}
 * Japanese: [[割れ目]] (wareme), [[隙間]] (sukima)
 * Latvian: {{t-|lv|lūzums|m|xs=Latvian}}
-* Romanian: {{t|ro|crăpătură|f}}, {{t|ro|spațiu (gol)|n}}
+* Romanian: {{t|ro|crăpătură|f}}, {{t|ro|spațiu (gol)|n}}, {{t|ro|deschidere|f}}
 * Russian: {{t+|ru|разлом|tr=razlóm}}
 {{trans-bottom}}
 
