--- a/en/b/break.6806.wikitext
+++ b/en/b/break.6806.wikitext
@@ -590,6 +590,7 @@ The sense relating to a spell of weather is most likely to be used after a perio
 {{trans-mid}}
 * Latvian: {{t-|lv|lūšana|f|xs=Latvian}}
 * [[Manx]]: {{t|gv|brishey|m}}
+* Romanian: {{t|ro|întrerupere|f}}
 * Spanish: {{t+|es|quebrar}}
 * Swedish: {{t+|sv|brott|n}}
 {{trans-bottom}}
