t+ro:[[conopidă]] t-balance ([[WT:EDIT|Assisted]]) <cauliflower#12196902>

--- a/en/c/cauliflower.34088.wikitext
+++ b/en/c/cauliflower.34088.wikitext
@@ -37,8 +37,8 @@
 * German: {{t+|de|Blumenkohl|m}},  ''(Austrian:)'' {{t|de|Karfiol|m}}
 * Greek: {{t+|el|κουνουπίδι|n|tr=kunupídi}}
 * [[Greenlandic]]: {{t|kl|blomkåli}}
-{{trans-mid}}
 * Hungarian: {{t+|hu|karfiol}}
+{{trans-mid}}
 * [[Ido]]: {{t+|io|florkaulo|xs=Ido}}
 * Indonesian: {{t-|id|blumkol|xs=Indonesian}}
 * Japanese: {{t-|ja|カリフラワー|tr=karifurawā}}
@@ -47,6 +47,7 @@
 * Navajo: {{tø|nv|chʼil łigaii}}
 * {{trreq|fa}}
 * Polish: {{t+|pl|kalafior|m}}
+* Romanian: {{t|ro|conopidă|f}}
 * Russian: {{t+|ru|цветная капуста|f|tr=cvetnája kapústa}}
 * [[Sotho]]: {{t|st|kholifolawa|xs=Sotho}}
 * Spanish: {{t-|es|coliflor|f}}
@@ -64,6 +65,7 @@
 * Hungarian: {{t+|hu|karfiol}}
 {{trans-mid}}
 * Navajo: {{tø|nv|chʼil łigaii}}
+* Romanian: {{t|ro|conopidă|f}}
 * Turkish: {{t+|tr|karnabahar}}
 {{trans-bottom}}
 
