--- a/en/m/minimum.34064.wikitext
+++ b/en/m/minimum.34064.wikitext
@@ -18,7 +18,8 @@ From {{etyl|la|en}} {{term|minimus||lang=la|least, smallest}}
 # {{analysis}} A [[lower bound]] of a set which is also an element of that set.
 # {{statistics}} The smallest member of a [[batch]] or [[sample]] or the lower bound of a [[probability distribution]].
 
-aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaasasdsdfsdfsdf
+====Usage notes====
+* {{term|minima|Minima}} is more common plural for the technical senses.
 
 ====Antonyms====
 * [[maximum]]
