--- a/en/a/allochthonous.802822.wikitext
+++ b/en/a/allochthonous.802822.wikitext
@@ -1,6 +1,7 @@
 ==English==
+
 ===Etymology===
-{{rfe}}
+{{rfe|lang=en}}
 
 ===Adjective===
 {{en-adj|-}}
@@ -24,8 +25,8 @@
 * [[autochthonous]]
 
 ===References===
-* ''The Dictionary of Difficult Words'' [[http://www.tiscali.co.uk/reference/dictionaries/difficultwords/data/d0000625.html]]
-* ''The Free Online Dictionary'' [[http://www.thefreedictionary.com/allochthonous]]
+* ''The Dictionary of Difficult Words'' [http://www.tiscali.co.uk/reference/dictionaries/difficultwords/data/d0000625.html]
+* ''The Free Online Dictionary'' [http://www.thefreedictionary.com/allochthonous]
 
 [[et:allochthonous]]
 [[ta:allochthonous]]
