--- a/en/a/allochthonous.802822.wikitext
+++ b/en/a/allochthonous.802822.wikitext
@@ -1,7 +1,7 @@
 ==English==
 
 ===Etymology===
-{{rfe|lang=en}}
+{{etyl|grc}} {{term|ἄλλοχθών|sc=polytonic|tr=allokhthōn|lang=grc}}, from {{term|ἄλλος||other|lang=grc|sc=polytonic}} + {{term|χθών||earth|lang=grc|sc=polytonic|tr=khthōn}}.{{attention|grc|please check diacritics, etc.}}
 
 ===Adjective===
 {{en-adj|-}}
