/* Etymology */ confix <octillion#12247495>

--- a/en/o/octillion.34109.wikitext
+++ b/en/o/octillion.34109.wikitext
@@ -1,7 +1,7 @@
 ==English==
 
 ===Etymology===
-From the prefix ''[[oct-]]'' (''eight'') + ''[[-illion]]'' (from [[million]]); [[ie]] the eighth [[power]] of a million, 10<sup>48</sup>.
+{{confix|oct|gloss1=eight|illion}}
 
 ===Pronunciation===
 * {{a|UK}} {{IPA|/ɒkˈtɪl.iː.ən/}}, {{SAMPA|/Qk"tIl.i:.@n/}}
