--- a/en/o/octillion.34109.wikitext
+++ b/en/o/octillion.34109.wikitext
@@ -26,6 +26,7 @@
 * German: {{t+|de|Quadrilliarde}}
 * Japanese: {{t|ja|千秭|tr=せんし, senshi|sc=Jpan}}
 {{trans-mid}}
+* Polish: [[kwadryliard]] {{m}}
 * Russian: [[окталлион]]
 * Ukrainian: [[октильйон]]
 {{trans-bottom}}
