--- a/en/p/PVC.4323.wikitext
+++ b/en/p/PVC.4323.wikitext
@@ -6,6 +6,7 @@
 
 # {{organic compound}} [[polyvinyl chloride|''p''oly''v''inyl ''c''hloride]]
 # {{medicine}} [[premature ventricular contraction|'''P'''remature '''V'''entricular '''C'''ontraction]] of the heart.
+# {{networking}} permanent [[virtual circuit]]
 
 ====Translations====
 {{trans-top|organic compound}}
