--- a/en/t/thing.7362.wikitext
+++ b/en/t/thing.7362.wikitext
@@ -238,6 +238,19 @@ Originally meaning an assembly, that handled political and court issues. Later a
 [[Category:English autological terms]]
 [[Category:English placeholder terms]]
 
+----
+
+==Old Dutch==
+
+===Etymology===
+From {{proto|Germanic|þingan|lang=odt}}.
+
+===Noun===
+{{infl|odt|noun|g=n}}
+
+# [[thing]], [[object]]
+# [[case]], [[matter]], [[issue]]
+
 [[ang:thing]]
 [[ar:thing]]
 [[zh-min-nan:thing]]
