t+vi:[[thì]] ([[WT:EDIT|Assisted]]) <then#12297677>

--- a/en/t/then.7353.wikitext
+++ b/en/t/then.7353.wikitext
@@ -178,6 +178,7 @@ From {{etyl|enm}} {{term|then|then(ne)|lang=enm}}, {{term|than|than(ne)|lang=enm
 * Swedish: {{t|sv|alltså}}, {{t|sv|då}}, {{t|sv|i så fall}}
 * Ukrainian: {{t|uk|тоді|tr=todí|sc=Cyrl}}
 * Urdu: {{t|ur|تو|tr=to|sc=ur-Arab}}
+* Vietnamese: {{t|vi|thì}}
 {{trans-bottom}}
 
 {{trans-top|at the same time; on the other hand}}
