--- a/en/m/marten.8230.wikitext
+++ b/en/m/marten.8230.wikitext
@@ -29,6 +29,7 @@
 
 ====Translations====
 {{trans-top|mammal}}
+* [[Abkhaz]]: {{t|ab|цыҕ|tr=cyġ|sc=Cyrl}}
 * Albanian: [[zardafi]]
 * Armenian: {{t+|hy|կզաքիս|tr=kzak'is}}
 * [[Basque]]: [[lepahori]]
