--- a/en/s/safety catch.776062.wikitext
+++ b/en/s/safety catch.776062.wikitext
@@ -4,3 +4,9 @@
 {{en-noun|pl=safety catches}}
 
 #A latching device that prevents accidental activation of a dangerous event, an [[interlock]].  Colloquially shortened to just a [[safety]].
+
+====Translations====
+{{trans-top|safety catch}}
+* Greek: {{t|el|ασφάλεια|f|tr=asfáleia}}
+{{trans-mid}}
+{{trans-bottom}}
