/* Translations */ <safety catch#12336771>

--- a/en/s/safety catch.776062.wikitext
+++ b/en/s/safety catch.776062.wikitext
@@ -9,4 +9,5 @@
 {{trans-top|safety catch}}
 * Greek: {{t|el|ασφάλεια|f|tr=asfáleia}}
 {{trans-mid}}
+* Russian: {{t|ru|предохранитель|m|sc=Cyrl|tr=predoxranítel'}}
 {{trans-bottom}}
