--- a/en/k/kerel.4473.wikitext
+++ b/en/k/kerel.4473.wikitext
@@ -1,4 +1,6 @@
 ==Dutch==
+===Etymology===
+From {{etyl|odt|nl}} *{{term||karl|lang=odt}}, *{{term||karal|lang=odt}}, *{{term||keril|lang=odt}}, from {{proto|Germanic|karlaz|lang=nl}}.
 
 ===Pronunciation===
 *{{audio|Nl-kerel.ogg|audio}}
