t+eo:[[subtraho]] ([[WT:EDIT|Assisted]]) <subtraction#12433863>

--- a/en/s/subtraction.26255.wikitext
+++ b/en/s/subtraction.26255.wikitext
@@ -18,6 +18,7 @@
 {{trans-top|process}}
 * Czech: {{t-|cs|odčítání|n}}
 * Dutch: {{t+|nl|aftrekken|n}}
+* Esperanto: {{t|eo|subtraho}}
 * Estonian: [[lahutamine]]
 * Finnish: {{t-|fi|vähentäminen}}
 * French: {{t+|fr|soustraction|f}}
