t+eo:[[subtraho]] ([[WT:EDIT|Assisted]]) <subtraction#12433969>

--- a/en/s/subtraction.26255.wikitext
+++ b/en/s/subtraction.26255.wikitext
@@ -40,6 +40,7 @@
 
 {{trans-top|calculation}}
 * Dutch: {{t+|nl|aftrekking|f}}
+* Esperanto: {{t|eo|subtraho}}
 * Hungarian: {{t|hu|kivonás}}
 {{trans-mid}}
 * Italian: {{t-|it|sottrazione|f}}
