--- a/en/m/multiplication.26254.wikitext
+++ b/en/m/multiplication.26254.wikitext
@@ -23,7 +23,7 @@ When applied to whole numbers, multiplication can be considered as repeated addi
 * Chinese Characters: [[乘]] / [[乗]]
 * Czech: {{t-|cs|násobení|n}}
 * Dutch: {{t-|nl|vermenigvuldigen|n}}
-* Esperanto: {{t|eo|multipliko}}
+* Esperanto: {{t|eo|multipliko}}, {{t|eo|multiplikado}}
 * Estonian: [[korrutamine]]
 * Finnish: {{t+|fi|kertolasku}}
 * French: {{t+|fr|multiplication|f}}
