--- a/en/m/multiplication.26254.wikitext
+++ b/en/m/multiplication.26254.wikitext
@@ -47,6 +47,7 @@ When applied to whole numbers, multiplication can be considered as repeated addi
 
 {{trans-top|calculation}}
 * Dutch: {{t|nl|vermenigvuldiging|f}}
+* Esperanto: {{t|eo|multipliko}}
 * Greek: {{t+|el|πολλαπλασιασμός|m|tr=pollaplasiasmós}}
 * Hungarian: {{t|hu|szorzás}}
 {{trans-mid}}
