/* Related terms */ fragile, frangible <fraction#12473764>

--- a/en/f/fraction.34055.wikitext
+++ b/en/f/fraction.34055.wikitext
@@ -50,6 +50,8 @@ From [[Middle English]] ''[[fraccioun]]'' (a breaking), from [[Anglo-Norman]], f
 * [[fractal]]
 * [[fracture]]
 * [[fragment]]
+* [[fragile]]
+* [[frangible]]
 
 ====Translations====
 {{trans-top|part of a whole}}
