/* Norwegian */ separate Bokmål and Nynorsk <at#12481331>

--- a/en/a/at.3964.wikitext
+++ b/en/a/at.3964.wikitext
@@ -298,14 +298,21 @@ From {{etyl|sga|ga}} {{term|att|lang=sga}}.
 
 ----
 
-==Norwegian==
+==Norwegian Bokmål==
 
 ===Conjunction===
-'''at'''
+{{infl|nb|conjugation}}
 
 # [[that#Conjunction|that]]
 
-[[Category:Norwegian conjunctions]]
+----
+
+==Norwegian Nynorsk==
+
+===Conjunction===
+{{infl|nn|conjugation}}
+
+# [[that#Conjunction|that]]
 
 ----
 
