--- a/en/w/whatever it takes.775539.wikitext
+++ b/en/w/whatever it takes.775539.wikitext
@@ -15,6 +15,7 @@
 
 ====Translations====
 {{trans-top|affirmation of willingness}}
+* French: {{t|fr|faire tout ce qui est nécessaire pour arriver à quelque chose}}
 * Spanish: [[todo lo que sea  necesario]].
 {{trans-mid}}
 {{trans-bottom}}
