--- a/en/t/then.7353.wikitext
+++ b/en/t/then.7353.wikitext
@@ -187,6 +187,7 @@ From {{etyl|enm}} {{term|then|then(ne)|lang=enm}}, {{term|than|than(ne)|lang=enm
 * Finnish: {{t+|fi|toisaalta}}
 * Hungarian: {{t+|hu|ugyanakkor}}, {{t+|hu|viszont}}
 * Italian: {{t|it|allo stesso tempo}}
+* Italian: {{t|it|allo stesso tempo}}
 * Japanese: {{t|ja|そのとき|tr=sono toki}}
 * Kurdish: li [[mil|milê]] din, [[li]] [[alî]] [[dî]]
 * Latin: {{t|la|interim}}
