--- a/en/a/all bark and no bite.742638.wikitext
+++ b/en/a/all bark and no bite.742638.wikitext
@@ -10,6 +10,12 @@
 # {{idiomatic}} Describes someone who often says [[cutting]] [[remarks]], but actually has a [[soft]] [[personality]] underneath.
 
 ====Translations====
+{{trans-top|full of big talk}}
+* Swedish: {{t|sv|stor i orden men liten på jorden}}
+{{trans-mid}}
+{{trans-bottom}}
+
+{{checktrans}}
 * French : [[grande gueule]]
 * Spanish: {{t-|es|mucho ruido y pocas nueces|m}}
 
