--- a/en/g/GCC.26247.wikitext
+++ b/en/g/GCC.26247.wikitext
@@ -1,16 +1,18 @@
 ==English==
 
 ===Etymology===
-GCC was originally an Acronym for "GNU C Compiler", now a [[backronym]] for "GNU Compiler Collection".
+*{{sense|GNU Compiler Collection}} GCC was originally an Acronym for "GNU C Compiler", now a [[backronym]] for "GNU Compiler Collection".
+*{{sense|Gulf Cooperation Council}} {{initialism of|Gulf Cooperation Council}}
 
 ==={{initialism}}===
 '''GCC'''
 
-# {{computing}} A collection of [[compilers]] for C, C++, Fortran, etc. aiming to be standards-compliant and correct.
-# [[w:Cooperation Council for the Arab States of the Gulf|Gulf Cooperation Council]]
+# {{computing}} [[GNU]] [[compiler|Compiler]] [[collection|Collection]] &mdash; A collection of [[compilers]] for C, C++, Fortran, etc. aiming to be standards-compliant and correct.
+# {{politics}} [[w:Cooperation Council for the Arab States of the Gulf|Gulf Cooperation Council]]
 
 ===See also===
-*[[Wikipedia:GNU Compiler Collection]]
+{{sense|computing}}
+*{{pedia|GNU Compiler Collection}}
 *GCC Official site: [http://gcc.gnu.org/]
 
 ===Anagrams===
