--- a/en/g/GCC.26247.wikitext
+++ b/en/g/GCC.26247.wikitext
@@ -8,12 +8,14 @@
 '''GCC'''
 
 # {{computing}} [[GNU]] [[compiler|Compiler]] [[collection|Collection]] &mdash; A collection of [[compilers]] for C, C++, Fortran, etc. aiming to be standards-compliant and correct.
-# {{politics}} [[w:Cooperation Council for the Arab States of the Gulf|Gulf Cooperation Council]]
+# {{politics}} [[Gulf]] [[cooperating|Cooperation]] [[council|Council]]
 
 ===See also===
-{{sense|computing}}
+{{sense|GNU C Compiler}}
 *{{pedia|GNU Compiler Collection}}
 *GCC Official site: [http://gcc.gnu.org/]
+{{sense|Gulf Cooperation Council}}
+* {{pedia|Cooperation Council for the Arab States of the Gulf}}
 
 ===Anagrams===
 * {{alphagram|[[CCG#English|CCG]]}} 
