--- a/en/l/limu.801596.wikitext
+++ b/en/l/limu.801596.wikitext
@@ -1,9 +1,12 @@
 ==Finnish==
 
 ===Noun===
-{{fi-noun|limu|type=solu}}
+{{fi-noun}}
 
 # {{colloquial|lang=fi}} [[soda]], [[soft drink]]
+
+====Declension====
+{{fi-decl-valo|lim|||u}}
 
 ====Synonyms====
 * {{qualifier|colloquial}} [[limppari]], [[limsa]]
