t+nl:[[oplichter]] t+nl:[[oplichtster]] t+nl:[[zwendelaar]] t+nl:[[zwendelaarster]] t+nl:[[afzetter]] t+nl:[[afzetster]] ([[WT:EDIT|Assisted]]) <crook#12608726>

--- a/en/c/crook.34069.wikitext
+++ b/en/c/crook.34069.wikitext
@@ -28,6 +28,7 @@
 {{trans-top|a criminal who steals}}
 * Bosnian: {{t|bs|lopov|m}}
 * Bulgarian: {{t|bg|крадец|m}}
+* Dutch: {{t|nl|oplichter|m}}, {{t|nl|oplichtster|f}}, {{t|nl|zwendelaar|m}}, {{t|nl|zwendelaarster|f}}, {{t|nl|afzetter|m}}, {{t|nl|afzetster|f}}
 * Finnish: {{t+|fi|rikollinen}}, {{t+|fi|konna}}
 * French: {{t+|fr|escroc|m}}
 {{trans-mid}}
