--- a/en/c/crook.34069.wikitext
+++ b/en/c/crook.34069.wikitext
@@ -28,7 +28,7 @@
 {{trans-top|a criminal who steals}}
 * Bosnian: {{t|bs|lopov|m}}
 * Bulgarian: {{t|bg|крадец|m}}
-* Dutch: {{t|nl|oplichter|m}}, {{t|nl|oplichtster|f}}, {{t|nl|zwendelaar|m}}, {{t|nl|zwendelaarster|f}}, {{t|nl|afzetter|m}}, {{t|nl|afzetster|f}}
+* Dutch: {{t|nl|oplichter|m}}, {{t|nl|oplichtster|f}}, {{t|nl|zwendelaar|m}}, {{t|nl|zwendelaarster|f}}, {{t|nl|afzetter|m}}, {{t|nl|afzetster|f}}, {{t|nl|bedrieger|m}}, {{t|nl|bedriegster|f}}
 * Finnish: {{t+|fi|rikollinen}}, {{t+|fi|konna}}
 * French: {{t+|fr|escroc|m}}
 {{trans-mid}}
