--- a/en/b/bosom friend.741206.wikitext
+++ b/en/b/bosom friend.741206.wikitext
@@ -13,10 +13,12 @@
 {{trans-top|very close friend}}
 * Dutch: {{t-|nl|getrouwe|m|f}}
 * French: {{t|fr|ami(e) intime|m|f}}
+* German: {{t|de|Busenfreund|m}}
 * Hungarian: {{t+|hu|kebelbarát}}
 {{trans-mid}}
-* Japanese: {{t|ja|親しい友達}},  {{t-|ja|親友}}
-* Mandarin: [[知己]] (pinyin: [[zhījǐ]])
+* Japanese: {{t|ja|親しい友達}},  {{t-|ja|親友}}, {{t|ja|親友|tr=しんゆう, shin'yū|sc=Jpan}}, {{t|ja|親しい友達|tr=したしいともだち, shitashii tomodachi|sc=Jpan}}, {{t|ja|心安い友人|tr=こころやすいゆうじん, kokoroyasui yūjin|sc=Jpan}}
+* Mandarin: [[知己]] (pinyin: [[zhījǐ]]), {{t|zh|知己|tr=zhījǐ|sc=Hani}}
+* Russian: {{t|ru|закадычный друг|m|tr=zakadýčnyj drug|sc=Cyrl}}
 * Vietnamese: {{t+|vi|tri kỷ|xs=Vietnamese}}
 {{trans-bottom}}
 
