--- a/en/a/abandonate.4398.wikitext
+++ b/en/a/abandonate.4398.wikitext
@@ -5,4 +5,11 @@
 
 # [[abandoned]], [[forsaken]], [[deserted]]
 
+==Interlingua==
+
+===Participle===
+'''abandonate'''
+
+# {{ia-form of|abandon|ate}}
+
 [[Category:Interlingua adjectives]]
