t+fi:[[näennäinen kirkkaus]] t-balance ([[WT:EDIT|Assisted]]) <apparent brightness#12686490>

--- a/en/a/apparent brightness.855921.wikitext
+++ b/en/a/apparent brightness.855921.wikitext
@@ -7,6 +7,7 @@
 
 ====Translations====
 {{trans-top|brightness of star}}
+* Finnish: {{t|fi|näennäinen kirkkaus}}
 {{trans-mid}}
 {{trans-bottom}}
 
